--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ca.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ca.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Afegir el proveïdor d'identitat (Automatic Translation)
 add-service-provider=Afegeix proveïdor de serveis
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Esteu segur que voleu suprimir aquest certificat de la keystore? (Automatic Translation)
 assertion-lifetime=Durada de l'asserció
 assertion-lifetime-help=Introduïu la durada de l'asserció en segons.
 attribute-mapping=Mapatge d'atributs
@@ -18,18 +20,20 @@ certificate-needs-auth=Ja hi ha una credencial amb un àlies coincident al keyst
 certificate-url=URL del certificat
 common-name=Nom comú
 create-certificate=Creeu un certificat
+delete-certificate=Suprimir el certificat (Automatic Translation)
 download-certificate=Baixa el certificat
 dsa=DSA
 encrypted=Xifrat
+encryption-certificate-and-private-key=Certificat de xifratge i clau privada (Automatic Translation)
 entity=Entitat
 entity-id-help=L'ID de l'entitat és un identificador únic que pot tenir fins a 1024 caràcters.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=L'ID de l'entitat s'ha de definir abans de poder generar la clau privada i el certificat.
 entity-id-too-long=L'ID de l'entitat té més de 1024 caràcters.
 force-authn=Força d'autenticació
 force-authn-help=Força el proveïdor d'identitat a reautenticar l'usuari independentment del context de seguretat existent.
-identity-provider=Proveïdor d'identitat
 identity-provider-connection=Connexió de proveïdor d'identitat
 identity-provider-connection-entity-id-help=Introduïu l'ID d'entitat del proveïdor d'identitat. Aquest valor ha de coincidir amb l'ID d'entitat declarat a les metadades de proveïdor d'identitat.
+identity-provider-connections=Connexions de proveïdor d'identitat (Automatic Translation)
 identity-provider-metadata-help=Proporcioneu o bé un URL a les metadades del proveïdor d'identitat o bé pengeu un fitxer de metadades XML. Quan proporcioneu un URL, les metadades s'actualitzen periòdicament. Assegureu-vos que les metadades continguin el certificat de signatura del proveïdor d'identitat.
 javax.portlet.title.1_WAR_samlportlet=Connexió persistent SAML
 javax.portlet.title.2_WAR_samlportlet=Administrador SAML
@@ -38,6 +42,8 @@ kerberos=Kerberos
 key-algorithm=Algoritme de la clau
 key-length-bits=Longitud de la clau (bits)
 key-password=Contrasenya de la clau
+keystore-exception=Hi havia un problema carregant la keystore SAML. Contacteu amb l'administrador del sistema. (Automatic Translation)
+keystore-password-incorrect=Incapaç d'autenticar amb la keystore SAML. Contacteu amb l'administrador del sistema. (Automatic Translation)
 locality=Localitat
 metadata-url=URL de metadades
 metadata-xml=XML de metadades
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Nom d'atribut d'identificador de nom
 name-identifier-attribute-name-help=Introduïu el nom d'atribut d'usuari com ara <strong>emailAddress</strong> o <strong>screenName</strong>. Alternativament, podeu utilitzar el prefix <strong>static:</strong> per utilitzar un valor estàtic o el prefix <strong>expando:</strong> per utilitzar un atribut expando.
 name-identifier-attribute-type=Tipus d'atribut d'identificador de nom
 name-identifier-format=Format d'identificador de nom
+new-identity-provider=Nou proveïdor d'identitat (Automatic Translation)
 new-service-provider=Nou proveïdor de serveis
 organization-unit=Unitat d'organització
 persistent=Persistent
-please-configure-identity-provider-before-enabling=Configureu el proveïdor d'identitat abans d'habilitar.
 please-create-a-signing-credential-before-enabling=Creeu una credencial de signatura abans d'habilitar.
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Si us plau, crear una credencial de xifrat si voleu afirmacions xifrats. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Introduïu un ID d'entitat de proveïdor d'identitat única.
 please-enter-a-unique-service-provider-entity-id=Introduïu un ID d'entitat de proveïdor de serveis únic.
 please-enter-a-valid-certificate-validity=Introduïu una validesa de certificat vàlida.
@@ -73,6 +80,7 @@ service-provider-defaults=Predeterminats del proveïdor de serveis
 service-provider-metadata-help=Proporcioneu o bé un URL a les metadades del proveïdor de serveis o bé pengeu un fitxer de metadades XML. Quan proporcioneu un URL, les metadades s'actualitzen periòdicament. Assegureu-vos que les metadades continguin el certificat de signatura del proveïdor de serveis.
 signature-algorithm=Algoritme de signatura
 subject-dn=Tema DN
+there-are-no-identity-providers=No hi ha cap proveïdors d'identitat. (Automatic Translation)
 there-are-no-service-providers=No hi ha proveïdors de serveis.
 transient=Transitori
 unspecified=Sense especificar
@@ -85,3 +93,4 @@ valid-from-x-until-x=Vàlid des del {0} fins al {1}.
 validity-days=Validesa (dies)
 windows-domain-qualified-name=Nom qualificat del domini del Windows
 x509-subject-name=Nom de tema X509
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Heu de configurar la connexió de proveïdor d'identitat com a mínim una per SAML a funció. (Automatic Translation)
