--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fi.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fi.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Add Identity Provider (Automatic Copy)
 add-service-provider=Lisää Palveluntarjoaja
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
 assertion-lifetime=Väitteen Käyttöikä
 assertion-lifetime-help=Syötä väitteen käyttöikä sekunteina.
 attribute-mapping=Määritteiden Vastinmääritys
@@ -18,18 +20,20 @@ certificate-needs-auth=Valtuutus vastaavalla aliaksella on jo SAML-keystoressa, 
 certificate-url=Varmenteen URL
 common-name=Yleinen Nimi
 create-certificate=Luo Varmenne
+delete-certificate=Delete Certificate (Automatic Copy)
 download-certificate=Lataa Varmenne
 dsa=DSA
 encrypted=Salattu
+encryption-certificate-and-private-key=Encryption Certificate and Private Key (Automatic Copy)
 entity=Yksikkö
 entity-id-help=Merkinnän tunnus on yksikäsitteinen tunniste, joka voi olla enintään 1024 merkkiä pitkä.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Entiteetin tunnus on määritettävä ennen kui nyksityisen avaimen ja sertifikaatin voi luoda.
 entity-id-too-long=Entiteetin tunnus on yli 1024 merkkiä pitkä.
 force-authn=Pakota Authn
 force-authn-help=Pakota identiteetin tarjoajaa autentikoimaan käyttäjä uudelleen olemassa olevasta suojauskontekstista riippumatta.
-identity-provider=Identiteetin Tarjoaja
 identity-provider-connection=Identiteetin Tarjoajan Yhteys
 identity-provider-connection-entity-id-help=Syötä identiteetin tarjoajan entiteettitunnste. Tämän arvon on vastattava identiteetin tarjoajan metatiedoissa annettua entiteettitunnistetta.
+identity-provider-connections=Identity Provider Connections (Automatic Copy)
 identity-provider-metadata-help=Anna joko URL identiteetin tarjoajan metatietoihin tai lataa metatieto-XML-tiedosto. Kun annat URL-osoitteen, metatietoja päivitetään jaksollisesti. Varmista, että metatiedot sisältävät identiteetin tarjoajan allekirjoitussertifikaatin.
 javax.portlet.title.1_WAR_samlportlet=SAML:n Keep Alive
 javax.portlet.title.2_WAR_samlportlet=SAML Hallinta
@@ -38,6 +42,8 @@ kerberos=Kerberos
 key-algorithm=Avainalgoritmi
 key-length-bits=Avaimen Pituus (Bitteinä)
 key-password=Avainsalasana
+keystore-exception=There was a problem loading the SAML keystore. Please contact your system administrator. (Automatic Copy)
+keystore-password-incorrect=Unable to authenticate with the SAML keystore. Please contact your system administrator. (Automatic Copy)
 locality=Sijainti
 metadata-url=Metatieto-URL
 metadata-xml=Metatieto-XML
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Nimitunnisteen Määritteen Nimi
 name-identifier-attribute-name-help=Kirjoita käyttäjän määritteen nimi, kuten <strong>emailAddress</strong> tai <strong>displayName</strong>. Vaihtoehtoisesti voit käyttää <strong>static:</strong>-etuliitettä staattisen arvon käyttämiseksi tai <strong>expando:</strong>-etuliitettä käyttääksesi expando-määritettä.
 name-identifier-attribute-type=Nimitunnisteen Määritteen Tyyppi
 name-identifier-format=Nimitunnisteen Muoto
+new-identity-provider=New Identity Provider (Automatic Copy)
 new-service-provider=Uusi Palveluntarjoaja
 organization-unit=Organisaatioyksikkö
 persistent=Jatkuva
-please-configure-identity-provider-before-enabling=Määritä identiteetin tarjoaja ennen käyttöönottoa.
 please-create-a-signing-credential-before-enabling=Luo allekirjoitusvarmenne ennen käyttöönottoa.
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Please create an encryption credential if you want assertions encrypted. (Automatic Copy)
 please-enter-a-unique-identity-provider-entity-id=Syötä yksikäsitteinen identiteetin tarjoajan entiteettitunnus.
 please-enter-a-unique-service-provider-entity-id=Syötä yksikäsitteinen palveluntarjoajan entiteettitunnus.
 please-enter-a-valid-certificate-validity=Syötä kelvollinen varmenteen voimassaolo.
@@ -73,6 +80,7 @@ service-provider-defaults=Palveluntarjoajan Oletukset
 service-provider-metadata-help=Anna joko URL palveluntarjoajan metatietoihin tai lataa metatieto-XML-tiedosto. Kun annat URL-osoitteen, metatietoja päivitetään jaksollisesti. Varmista, että metatiedot sisältävät palveluntarjoajan allekirjoitussertifikaatin.
 signature-algorithm=Allekirjoitusalgoritmi
 subject-dn=Aihe DN
+there-are-no-identity-providers=There are no identity providers. (Automatic Copy)
 there-are-no-service-providers=Ei ole palveluntarjoajia.
 transient=Ohimenevä
 unspecified=Määrittelemätön
@@ -85,3 +93,4 @@ valid-from-x-until-x=Voimassa {0} alkaen {1} saakka.
 validity-days=Voimassaolo (päiviä)
 windows-domain-qualified-name=Windowsin Toimialueen Täydellinen Nimi
 x509-subject-name=X509-aihenimi
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function. (Automatic Copy)
