--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_in.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_in.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Tambahkan identitas selular (Automatic Translation)
 add-service-provider=Tambahkan penyedia layanan (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Apakah Anda yakin Anda ingin menghapus sertifikat ini dari keystore? (Automatic Translation)
 assertion-lifetime=Pernyataan seumur hidup (Automatic Translation)
 assertion-lifetime-help=Masukkan pernyataan hidup dalam detik. (Automatic Translation)
 attribute-mapping=Atribut pemetaan (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=Kredensial dengan pencocokan alias sudah ada di SAML keys
 certificate-url=Sertifikat URL (Automatic Translation)
 common-name=Nama umum (Automatic Translation)
 create-certificate=Membuat sertifikat (Automatic Translation)
+delete-certificate=Menghapus sertifikat (Automatic Translation)
 download-certificate=Men-download sertifikat (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Dienkripsi (Automatic Translation)
+encryption-certificate-and-private-key=Sertifikat enkripsi dan kunci pribadi (Automatic Translation)
 entity=Entitas (Automatic Translation)
 entity-id-help=Entitas ID adalah pengidentifikasi unik yang dapat mencapai panjang 1024 karakter. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=ID entitas harus disetel sebelum kunci pribadi dan sertifikat dapat dihasilkan. (Automatic Translation)
 entity-id-too-long=Entitas ID adalah lebih dari 1024 karakter. (Automatic Translation)
 force-authn=Kekuatan Authn (Automatic Translation)
 force-authn-help=Memaksa identitas selular untuk reauthenticate pengguna tanpa konteks keamanan yang sudah tersedia. (Automatic Translation)
-identity-provider=Identitas selular (Automatic Translation)
 identity-provider-connection=Identitas selular koneksi (Automatic Translation)
 identity-provider-connection-entity-id-help=Masukkan ID entitas dari identitas selular. Nilai ini harus cocok ID entitas yang dinyatakan dalam identitas penyedia metadata. (Automatic Translation)
+identity-provider-connections=Identitas selular koneksi (Automatic Translation)
 identity-provider-metadata-help=Menyediakan baik sebuah URL untuk identitas penyedia metadata atau meng-upload metadata XML file. Ketika Anda memberikan URL, metadata akan diperbarui secara berkala. Pastikan metadata berisi penandatanganan sertifikat identitas selular. (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=SAML tetap hidup (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=SAML Admin (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Kerberos (Automatic Translation)
 key-algorithm=Algoritma kunci (Automatic Translation)
 key-length-bits=Panjang kunci (Bits) (Automatic Translation)
 key-password=Sandi kunci (Automatic Translation)
+keystore-exception=Ada masalah loading SAML keystore. Hubungi administrator sistem Anda. (Automatic Translation)
+keystore-password-incorrect=Tidak dapat mengotentikasi dengan SAML keystore. Hubungi administrator sistem Anda. (Automatic Translation)
 locality=Wilayah (Automatic Translation)
 metadata-url=Metadata URL (Automatic Translation)
 metadata-xml=Metadata XML (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Nama atribut nama pengenal (Automatic Translation
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=Nama pengenal atribut jenis (Automatic Translation)
 name-identifier-format=Format nama pengenal (Automatic Translation)
+new-identity-provider=Penyedia identitas baru (Automatic Translation)
 new-service-provider=Penyedia layanan baru (Automatic Translation)
 organization-unit=Unit organisasi (Automatic Translation)
 persistent=Terus-menerus (Automatic Translation)
-please-configure-identity-provider-before-enabling=Harap mengkonfigurasi identitas selular sebelum memungkinkan. (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Harap membuat kredensial penandatanganan sebelum memungkinkan. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Harap membuat kredensial enkripsi jika Anda ingin pernyataan-pernyataan yang dienkripsi. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Masukkan ID yang identitas unik penyedia entitas. (Automatic Translation)
 please-enter-a-unique-service-provider-entity-id=Masukkan ID yang unik Layanan penyedia entitas. (Automatic Translation)
 please-enter-a-valid-certificate-validity=Masukkan validitas sertifikat berlaku. (Automatic Translation)
@@ -73,6 +80,7 @@ service-provider-defaults=Penyedia jasa default (Automatic Translation)
 service-provider-metadata-help=Menyediakan baik sebuah URL untuk layanan penyedia metadata atau meng-upload metadata XML file. Ketika Anda memberikan URL, metadata akan diperbarui secara berkala. Pastikan metadata berisi sertifikat penandatanganan penyedia layanan. (Automatic Translation)
 signature-algorithm=Algoritma tanda tangan (Automatic Translation)
 subject-dn=Subjek DN (Automatic Translation)
+there-are-no-identity-providers=Ada tidak ada identitas penyedia. (Automatic Translation)
 there-are-no-service-providers=Ada tidak ada layanan penyedia. (Automatic Translation)
 transient=Transien (Automatic Translation)
 unspecified=Tidak ditentukan (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=Validitas (hari) (Automatic Translation)
 windows-domain-qualified-name=Windows nama Domain berkualifikasi (Automatic Translation)
 x509-subject-name=X509 subjek nama (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Anda harus mengkonfigurasi sambungan penyedia setidaknya satu identitas untuk SAML untuk fungsi. (Automatic Translation)
