--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_pl.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_pl.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Dodawanie dostawcy tożsamości (Automatic Translation)
 add-service-provider=Dodawanie dostawcy usług (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Czy na pewno chcesz usunąć ten certyfikat z magazynu kluczy? (Automatic Translation)
 assertion-lifetime=Potwierdzenia istnienia (Automatic Translation)
 assertion-lifetime-help=Wprowadź potwierdzenia istnienia w sekundach. (Automatic Translation)
 attribute-mapping=Mapowanie atrybutu (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=Poświadczenie z pasującymi alias już istnieje w magazy
 certificate-url=Adres URL certyfikatu (Automatic Translation)
 common-name=Nazwa zwyczajowa (Automatic Translation)
 create-certificate=Tworzenie certyfikatu (Automatic Translation)
+delete-certificate=Usuwanie certyfikatu (Automatic Translation)
 download-certificate=Pobierz certyfikat (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Szyfrowane (Automatic Translation)
+encryption-certificate-and-private-key=Certyfikat szyfrowania i klucz prywatny (Automatic Translation)
 entity=Jednostki (Automatic Translation)
 entity-id-help=Identyfikator jednostki jest unikatowy identyfikator, który może być maksymalnie 1024 znaków. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Identyfikator jednostki musi być ustawiona przed klucz prywatny i certyfikat mogą być generowane. (Automatic Translation)
 entity-id-too-long=Identyfikator jednostki jest więcej niż 1024 znaków. (Automatic Translation)
 force-authn=Poziomach mocy (Automatic Translation)
 force-authn-help=Dostawcy tożsamości sił aby uwierzytelniać użytkownika niezależnie od istniejącego kontekstu zabezpieczeń. (Automatic Translation)
-identity-provider=Dostawcy tożsamości (Automatic Translation)
 identity-provider-connection=Tożsamość dostawcy połączenia (Automatic Translation)
 identity-provider-connection-entity-id-help=Wprowadź identyfikator jednostki dostawcy tożsamości. Ta wartość musi odpowiadać identyfikatora jednostki zadeklarowane w metadane dostawcy tożsamości. (Automatic Translation)
+identity-provider-connections=Tożsamość dostawcy połączenia (Automatic Translation)
 identity-provider-metadata-help=Podać adres URL do metadane dostawcy tożsamości, lub przesłać pliku XML metadanych. Jeśli podasz adres URL metadanych jest okresowo aktualizowane. Upewnij się, że metadane zawiera certyfikat podpisywania dostawcy tożsamości. (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=SAML Keep Alive (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=SAML Admin (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Protokołu Kerberos (Automatic Translation)
 key-algorithm=Algorytm klucza (Automatic Translation)
 key-length-bits=Długość klucza (bity) (Automatic Translation)
 key-password=Hasło klucza (Automatic Translation)
+keystore-exception=Wystąpił problem podczas ładowania magazynu kluczy SAML. Skontaktuj się z administratorem systemu. (Automatic Translation)
+keystore-password-incorrect=Nie można uwierzytelnić z magazynu kluczy SAML. Skontaktuj się z administratorem systemu. (Automatic Translation)
 locality=Miejscowości (Automatic Translation)
 metadata-url=Adres URL metadanych (Automatic Translation)
 metadata-xml=Metadanych XML (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Nazwa identyfikatora atrybut Nazwa (Automatic Tra
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=Nazwa identyfikatora atrybut typu (Automatic Translation)
 name-identifier-format=Format identyfikatora nazwy (Automatic Translation)
+new-identity-provider=Nowy dostawca tożsamości (Automatic Translation)
 new-service-provider=Nowy dostawca usług (Automatic Translation)
 organization-unit=Jednostka organizacyjna (Automatic Translation)
 persistent=Trwałe (Automatic Translation)
-please-configure-identity-provider-before-enabling=Należy skonfigurować dostawcę tożsamości przed włączeniem. (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Należy utworzyć poświadczenia podpisywania przed włączeniem. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Proszę utworzyć szyfrowania poświadczeń, jeśli chcesz potwierdzeń szyfrowane. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Wprowadź identyfikator unikatową tożsamość dostawcy obiektu. (Automatic Translation)
 please-enter-a-unique-service-provider-entity-id=Proszę wprowadź identyfikatora jednostki unikalna usługa dostawcy. (Automatic Translation)
 please-enter-a-valid-certificate-validity=Proszę podać prawidłowy okres ważności. (Automatic Translation)
@@ -73,6 +80,7 @@ service-provider-defaults=Ustawień domyślnych usługi dostawcy (Automatic Tran
 service-provider-metadata-help=Podać adres URL do metadanych dostawcy usługi lub przesłać pliku XML metadanych. Jeśli podasz adres URL metadanych jest okresowo aktualizowane. Upewnij się, że metadane zawiera certyfikat podpisywania usługodawcy. (Automatic Translation)
 signature-algorithm=Algorytm podpisu (Automatic Translation)
 subject-dn=Przedmiotem DN (Automatic Translation)
+there-are-no-identity-providers=Istnieją nie dostawców tożsamości. (Automatic Translation)
 there-are-no-service-providers=Istnieją żadni usługodawcy. (Automatic Translation)
 transient=Przemijające (Automatic Translation)
 unspecified=Nieokreślony (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=Ważności (dni) (Automatic Translation)
 windows-domain-qualified-name=Kwalifikowaną nazwę domeny systemu Windows (Automatic Translation)
 x509-subject-name=Nazwa podmiotu x509 (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Należy skonfigurować co najmniej jedną tożsamość połączenia dostawcy dla SAML do funkcji. (Automatic Translation)
