--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_pt_BR.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Adicionar provedor de identidade (Automatic Translation)
 add-service-provider=Adicionar Provedor de Serviço
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Tem certeza que deseja excluir este certificado do armazenamento de chaves? (Automatic Translation)
 assertion-lifetime=Duração da Asserção
 assertion-lifetime-help=Insira tempo de vida da asserção em segundos.
 attribute-mapping=Mapeamento de Atributos
@@ -18,18 +20,20 @@ certificate-needs-auth=A autorização para o alias correspondente já está no 
 certificate-url=URL do Certificado
 common-name=Nome Comum
 create-certificate=Criar Certificado
+delete-certificate=Excluir o certificado (Automatic Translation)
 download-certificate=Descarregar Certificado
 dsa=DSA
 encrypted=Criptografado
+encryption-certificate-and-private-key=Certificado de criptografia e chave privada (Automatic Translation)
 entity=Entidade
 entity-id-help=O ID da Entidade é um identificador exclusivo, que pode ter até 1024 caracteres.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=O ID da Entidade deve ser configurado antes que a chave privada e o certificado possam ser gerados.
 entity-id-too-long=O ID da Entidade é maior do que 1024 caracteres.
 force-authn=Forçar Authn
 force-authn-help=Força um provedor de identidade para reautenticar o usuário, independentemente do contexto de segurança existente.
-identity-provider=Provedor de Identidade
 identity-provider-connection=Conexão do Provedor de Identidade
 identity-provider-connection-entity-id-help=Digite o ID da entidade do provedor de identidade. Esse valor deve corresponder ao ID da entidade declarado nos metadados do provedor de identidade.
+identity-provider-connections=Conexões do provedor de identidade (Automatic Translation)
 identity-provider-metadata-help=Especifique a URL para o provedor de identidade ou faça o upload do arquivo XML de metadados. Se você fornecer uma URL, os metadados serão atualizados regularmente. Certifique-se de que os metadados contenham o certificado assinado do provedor de identidade.
 javax.portlet.title.1_WAR_samlportlet=Keep-Alive do SAML
 javax.portlet.title.2_WAR_samlportlet=Administrador SAML
@@ -38,6 +42,8 @@ kerberos=Kerberos
 key-algorithm=Algoritmo de Chave
 key-length-bits=Comprimento da Chave (Bits)
 key-password=Senha da Chave
+keystore-exception=Houve um problema ao carregar o keystore SAML. Por favor, contate o administrador do sistema. (Automatic Translation)
+keystore-password-incorrect=Não é possível autenticar com o keystore SAML. Por favor, contate o administrador do sistema. (Automatic Translation)
 locality=Localidade
 metadata-url=URL de Metadados
 metadata-xml=XML de Metadados
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Nome do Atributo do Identificador de Nome
 name-identifier-attribute-name-help=Especifique atributos do usuário, como <strong>emailAddress</strong> ou <strong>screenName</strong>. Como alternativa, você pode usar o prefixo<strong>static:</strong>para usar valores estáticos ou<strong>expando:</strong> para usar atributos expando.
 name-identifier-attribute-type=Tipo de Atributo do Identificador de Nome
 name-identifier-format=Formato do Identificador de Nome
+new-identity-provider=Novo provedor de identidade (Automatic Translation)
 new-service-provider=Novo Provedor de Serviço
 organization-unit=Unidade Organizacional
 persistent=Constante
-please-configure-identity-provider-before-enabling=Por favor, configure o provedor de identidade antes de ativá-lo.
 please-create-a-signing-credential-before-enabling=Por favor, crie uma credencial de assinatura antes de ativar.
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Por favor, crie uma credencial de criptografia se quiser asserções criptografadas. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Por favor, insira um ID de entidade do provedor de identidade exclusivo.
 please-enter-a-unique-service-provider-entity-id=Por favor, insira um ID de entidade exclusivo do provedor de serviços.
 please-enter-a-valid-certificate-validity=Por favor insira um certificado válido.
@@ -73,6 +80,7 @@ service-provider-defaults=Padrões do Provedor de Serviço
 service-provider-metadata-help=Especifique a URL para o provedor de serviço ou faça o upload do arquivo XML de metadados. Se você fornecer uma URL, os metadados serão atualizados regularmente. Certifique-se de que os metadados contenham o certificado assinado do provedor de serviço.
 signature-algorithm=Algoritmo de Assinatura
 subject-dn=Assunto DN
+there-are-no-identity-providers=Não há nenhum provedor de identidade. (Automatic Translation)
 there-are-no-service-providers=Não há provedores de serviços.
 transient=Transitório
 unspecified=Não Especificado
@@ -85,3 +93,4 @@ valid-from-x-until-x=Válido de {0} até {1}.
 validity-days=Validade (dias)
 windows-domain-qualified-name=Nome Qualificado do Domínio do Windows
 x509-subject-name=Nome do Assunto X509
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Você deve configurar a conexão de provedor de identidade de pelo menos um para SAML para função. (Automatic Translation)
