--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_da.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_da.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Add Identity Provider (Automatic Copy)
 add-service-provider=Add Service Provider (Automatic Copy)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
 assertion-lifetime=Assertion Lifetime (Automatic Copy)
 assertion-lifetime-help=Enter the assertion lifetime in seconds. (Automatic Copy)
 attribute-mapping=Attribute Mapping (Automatic Copy)
@@ -18,18 +20,20 @@ certificate-needs-auth=A credential with matching alias already exists in the SA
 certificate-url=Certificate URL (Automatic Copy)
 common-name=Common Name (Automatic Copy)
 create-certificate=Create Certificate (Automatic Copy)
+delete-certificate=Delete Certificate (Automatic Copy)
 download-certificate=Download Certificate (Automatic Copy)
 dsa=DSA (Automatic Copy)
 encrypted=Encrypted (Automatic Copy)
+encryption-certificate-and-private-key=Encryption Certificate and Private Key (Automatic Copy)
 entity=Entity (Automatic Copy)
 entity-id-help=Entity ID is a unique identifier that can be up to 1024 characters long. (Automatic Copy)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Entity ID must be set before private key and certificate can be generated. (Automatic Copy)
 entity-id-too-long=Entity ID is more than 1024 characters long. (Automatic Copy)
 force-authn=Force Authn (Automatic Copy)
 force-authn-help=Force identity provider to reauthenticate user regardless of existing security context. (Automatic Copy)
-identity-provider=Identity Provider (Automatic Copy)
 identity-provider-connection=Identity Provider Connection (Automatic Copy)
 identity-provider-connection-entity-id-help=Enter the entity ID of the identity provider. This value must match the entity ID declared in the identity provider metadata. (Automatic Copy)
+identity-provider-connections=Identity Provider Connections (Automatic Copy)
 identity-provider-metadata-help=Provide either a URL to the identity provider metadata or upload a metadata XML file. When you provide a URL, the metadata is periodically updated. Make sure the metadata contains the signing certificate of the identity provider. (Automatic Copy)
 javax.portlet.title.1_WAR_samlportlet=SAML Keep Alive (Automatic Copy)
 javax.portlet.title.2_WAR_samlportlet=SAML Admin (Automatic Copy)
@@ -38,6 +42,8 @@ kerberos=Kerberos (Automatic Copy)
 key-algorithm=Key Algorithm (Automatic Copy)
 key-length-bits=Key Length (Bits) (Automatic Copy)
 key-password=Key Password (Automatic Copy)
+keystore-exception=There was a problem loading the SAML keystore. Please contact your system administrator. (Automatic Copy)
+keystore-password-incorrect=Unable to authenticate with the SAML keystore. Please contact your system administrator. (Automatic Copy)
 locality=Locality (Automatic Copy)
 metadata-url=Metadata URL (Automatic Copy)
 metadata-xml=Metadata XML (Automatic Copy)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Name Identifier Attribute Name (Automatic Copy)
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=Name Identifier Attribute Type (Automatic Copy)
 name-identifier-format=Name Identifier Format (Automatic Copy)
+new-identity-provider=New Identity Provider (Automatic Copy)
 new-service-provider=New Service Provider (Automatic Copy)
 organization-unit=Organization Unit (Automatic Copy)
 persistent=Persistent (Automatic Copy)
-please-configure-identity-provider-before-enabling=Please configure identity provider before enabling. (Automatic Copy)
 please-create-a-signing-credential-before-enabling=Please create a signing credential before enabling. (Automatic Copy)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Please create an encryption credential if you want assertions encrypted. (Automatic Copy)
 please-enter-a-unique-identity-provider-entity-id=Please enter a unique identity provider entity ID. (Automatic Copy)
 please-enter-a-unique-service-provider-entity-id=Please enter a unique service provider entity ID. (Automatic Copy)
 please-enter-a-valid-certificate-validity=Please enter a valid certificate validity. (Automatic Copy)
@@ -73,6 +80,7 @@ service-provider-defaults=Service Provider Defaults (Automatic Copy)
 service-provider-metadata-help=Provide either a URL to the service provider metadata or upload a metadata XML file. When you provide a URL, the metadata is periodically updated. Make sure the metadata contains the signing certificate of the service provider. (Automatic Copy)
 signature-algorithm=Signature Algorithm (Automatic Copy)
 subject-dn=Subject DN (Automatic Copy)
+there-are-no-identity-providers=There are no identity providers. (Automatic Copy)
 there-are-no-service-providers=There are no service providers. (Automatic Copy)
 transient=Transient (Automatic Copy)
 unspecified=Unspecified (Automatic Copy)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=Validity (days) (Automatic Copy)
 windows-domain-qualified-name=Windows Domain Qualified Name (Automatic Copy)
 x509-subject-name=X509 Subject Name (Automatic Copy)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function. (Automatic Copy)
