--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_de.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_de.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Add Identity Provider (Automatic Copy)
 add-service-provider=Service Provider hinzufügen
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
 assertion-lifetime=Lebensdauer der Assertion
 assertion-lifetime-help=Bitte geben Sie die Lebensdauer der Assertion an.
 attribute-mapping=Attributzuordnung
@@ -18,18 +20,20 @@ certificate-needs-auth=Anmeldeinformationen mit entsprechendem Alias existieren 
 certificate-url=URL des Zertifikats
 common-name=Allgemeiner Name
 create-certificate=Zertifikat erstellen
+delete-certificate=Delete Certificate (Automatic Copy)
 download-certificate=Zertifikat herunterladen
 dsa=DSA
 encrypted=Verschlüsselt
+encryption-certificate-and-private-key=Encryption Certificate and Private Key (Automatic Copy)
 entity=Entität
 entity-id-help=Die Entitäts-ID ist eine eindeutige Kennung, die bis zu 1024 Zeichen lang sein kann.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Die Entitäts-ID muss konfiguriert sein, bevor privater Schlüssel und Zertifikat generiert werden können.
 entity-id-too-long=Entitäts-ID ist über 1024 Zeichen lang.
 force-authn=Authn erzwingen
 force-authn-help=Weist den Identity Provider an, den Benutzer unabhängig eines vorhandenen Security-Kontextes erneut zu authentisieren.
-identity-provider=Identity Provider
 identity-provider-connection=Verbindung des Identity Providers
 identity-provider-connection-entity-id-help=Geben Sie die Entitäts-ID des Identity Providers an. Dieser Wert muss identisch mit jenem sein, der in den Metadaten des Identity Providers definiert wurde.
+identity-provider-connections=Identity Provider Connections (Automatic Copy)
 identity-provider-metadata-help=Geben Sie entweder eine URL der Metadaten des Identity Providers an oder laden eine Metadaten-XML hoch. Wenn Sie eine URL angeben, werden die Metadaten periodisch aktualisiert. Stellen Sie sicher, dass die Metadaten das Zertifikat des Identity Providers enthalten.
 javax.portlet.title.1_WAR_samlportlet=SAML-Keepalive
 javax.portlet.title.2_WAR_samlportlet=SAML-Administration
@@ -38,6 +42,8 @@ kerberos=Kerberos
 key-algorithm=Schlüsselalgorithmus
 key-length-bits=Schlüssellänge (Bits)
 key-password=Kennwort für Schlüssel
+keystore-exception=There was a problem loading the SAML keystore. Please contact your system administrator. (Automatic Copy)
+keystore-password-incorrect=Unable to authenticate with the SAML keystore. Please contact your system administrator. (Automatic Copy)
 locality=Ort
 metadata-url=Metadaten-URL
 metadata-xml=Metadata-XML
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Attributename der Namenskennung
 name-identifier-attribute-name-help=Geben Sie Benutzerattribute, wie <strong>emailAddress</strong> oder <strong>screenName</strong> an. Alternativ können Sie das Prefix <strong>static:</strong> nutzen, um statische Werte zu benutzen oder <strong>expando:</strong> für Expandoattribute.
 name-identifier-attribute-type=Attributart der Namenskennung
 name-identifier-format=Format der Namenskennung
+new-identity-provider=New Identity Provider (Automatic Copy)
 new-service-provider=Neuer Service Provider
 organization-unit=Organisationseinheit
 persistent=Dauerhaft
-please-configure-identity-provider-before-enabling=Bitte konfigurieren Sie den Identity Provider vor der Aktivierung.
 please-create-a-signing-credential-before-enabling=Bitte erstellen Sie vor der Aktivierung eine Signaturanmeldeinformationen.
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Please create an encryption credential if you want assertions encrypted. (Automatic Copy)
 please-enter-a-unique-identity-provider-entity-id=Bitte geben Sie eine einzigartige Entitäts-ID des Identity Providers an.
 please-enter-a-unique-service-provider-entity-id=Bitte geben Sie eine eindeutige Entitäts-ID des Service Providers an.
 please-enter-a-valid-certificate-validity=Geben Sie bitte eine gültige Zertifikatsgültigkeit ein.
@@ -73,6 +80,7 @@ service-provider-defaults=Standardeinstellungen des Service Providers
 service-provider-metadata-help=Geben Sie entweder eine URL der Metadaten des Service Providers an oder laden eine Metadaten-XML hoch. Wenn Sie eine URL angeben, werden die Metadaten periodisch aktualisiert. Stellen Sie sicher, dass die Metadaten das Zertifikat des Service Providers enthalten.
 signature-algorithm=Signaturalgorithmus
 subject-dn=Subjekt-DN
+there-are-no-identity-providers=There are no identity providers. (Automatic Copy)
 there-are-no-service-providers=Keine Service Provider vorhanden.
 transient=Vorübergehend
 unspecified=Nicht spezifiziert
@@ -85,3 +93,4 @@ valid-from-x-until-x=Gü´ltig von {0} bis {1}.
 validity-days=Gültigkeit (Tage)
 windows-domain-qualified-name=Qualified Name der Windowsdomäne
 x509-subject-name=X509 Subjektname
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function. (Automatic Copy)
