--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_en.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_en.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Add Identity Provider
 add-service-provider=Add Service Provider
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore?
 assertion-lifetime=Assertion Lifetime
 assertion-lifetime-help=Enter the assertion lifetime in seconds.
 attribute-mapping=Attribute Mapping
@@ -18,18 +20,20 @@ certificate-needs-auth=A credential with matching alias already exists in the SA
 certificate-url=Certificate URL
 common-name=Common Name
 create-certificate=Create Certificate
+delete-certificate=Delete Certificate
 download-certificate=Download Certificate
 dsa=DSA
 encrypted=Encrypted
+encryption-certificate-and-private-key=Encryption Certificate and Private Key
 entity=Entity
 entity-id-help=Entity ID is a unique identifier that can be up to 1024 characters long.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Entity ID must be set before private key and certificate can be generated.
 entity-id-too-long=Entity ID is more than 1024 characters long.
 force-authn=Force Authn
 force-authn-help=Force identity provider to reauthenticate user regardless of existing security context.
-identity-provider=Identity Provider
 identity-provider-connection=Identity Provider Connection
 identity-provider-connection-entity-id-help=Enter the entity ID of the identity provider. This value must match the entity ID declared in the identity provider metadata.
+identity-provider-connections=Identity Provider Connections
 identity-provider-metadata-help=Provide either a URL to the identity provider metadata or upload a metadata XML file. When you provide a URL, the metadata is periodically updated. Make sure the metadata contains the signing certificate of the identity provider.
 javax.portlet.title.1_WAR_samlportlet=SAML Keep Alive
 javax.portlet.title.2_WAR_samlportlet=SAML Admin
@@ -38,6 +42,8 @@ kerberos=Kerberos
 key-algorithm=Key Algorithm
 key-length-bits=Key Length (Bits)
 key-password=Key Password
+keystore-exception=There was a problem loading the SAML keystore. Please contact your system administrator.
+keystore-password-incorrect=Unable to authenticate with the SAML keystore. Please contact your system administrator.
 locality=Locality
 metadata-url=Metadata URL
 metadata-xml=Metadata XML
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Name Identifier Attribute Name
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute.
 name-identifier-attribute-type=Name Identifier Attribute Type
 name-identifier-format=Name Identifier Format
+new-identity-provider=New Identity Provider
 new-service-provider=New Service Provider
 organization-unit=Organization Unit
 persistent=Persistent
-please-configure-identity-provider-before-enabling=Please configure identity provider before enabling.
 please-create-a-signing-credential-before-enabling=Please create a signing credential before enabling.
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Please create an encryption credential if you want assertions encrypted.
 please-enter-a-unique-identity-provider-entity-id=Please enter a unique identity provider entity ID.
 please-enter-a-unique-service-provider-entity-id=Please enter a unique service provider entity ID.
 please-enter-a-valid-certificate-validity=Please enter a valid certificate validity.
@@ -73,6 +80,7 @@ service-provider-defaults=Service Provider Defaults
 service-provider-metadata-help=Provide either a URL to the service provider metadata or upload a metadata XML file. When you provide a URL, the metadata is periodically updated. Make sure the metadata contains the signing certificate of the service provider.
 signature-algorithm=Signature Algorithm
 subject-dn=Subject DN
+there-are-no-identity-providers=There are no identity providers.
 there-are-no-service-providers=There are no service providers.
 transient=Transient
 unspecified=Unspecified
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}.
 validity-days=Validity (days)
 windows-domain-qualified-name=Windows Domain Qualified Name
 x509-subject-name=X509 Subject Name
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function.
