--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_et.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_et.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Lisada identiteedipakkuja (Automatic Translation)
 add-service-provider=Teenusepakkuja lisamine (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Kas soovite kindlasti kustutada selle serdi ning võtmehoidjas? (Automatic Translation)
 assertion-lifetime=Väide elu (Automatic Translation)
 assertion-lifetime-help=Sisestage väide elu sekundit. (Automatic Translation)
 attribute-mapping=Atribuudi vastendamine (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=Sobivate mandaati SAML võtmehoidjas alias juba olemas, e
 certificate-url=Sertifikaadi URL (Automatic Translation)
 common-name=Üldnimetus (Automatic Translation)
 create-certificate=Serdi loomine (Automatic Translation)
+delete-certificate=Kustuta tunnistus (Automatic Translation)
 download-certificate=Lae sertifikaat (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Krüpteeritud (Automatic Translation)
+encryption-certificate-and-private-key=Krüptimise sert ja privaatvõti (Automatic Translation)
 entity=Üksus (Automatic Translation)
 entity-id-help=Olemi ID on kordumatu tunnus, mis võib olla kuni 1024 märki. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Olemi ID peab olema määratud enne privaatvõtme ja sertifikaadi majandustarkvara. (Automatic Translation)
 entity-id-too-long=Olemi ID on pikem kui 1024 märki. (Automatic Translation)
 force-authn=Jõud Authn (Automatic Translation)
 force-authn-help=Jõu identiteedipakkuja reauthenticate kasutaja sõltumata olemasoleva turvalisuse kontekstis. (Automatic Translation)
-identity-provider=Identiteedipakkuja (Automatic Translation)
 identity-provider-connection=Identiteedi pakkuja ühenduse (Automatic Translation)
 identity-provider-connection-entity-id-help=Sisestage identiteedi pakkuja üksuse ID-d. See väärtus peab vastama olemi ID deklareeritud identiteedi pakkuja metaandmed. (Automatic Translation)
+identity-provider-connections=Identiteedi pakkuja ühendused (Automatic Translation)
 identity-provider-metadata-help=Kas URL-i identiteedi pakkuja metaandmetele või metaandmete XML faili üles laadida. Kui sisestate URL värskendatakse perioodiliselt metaandmed. Veenduge, et metaandmete sisaldab identiteedipakkuja allkirjasert. (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=SAML hoida elus (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=SAML Admin (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Kerberose (Automatic Translation)
 key-algorithm=Võtme algoritm (Automatic Translation)
 key-length-bits=Võtme pikkus (bitti) (Automatic Translation)
 key-password=Oluliseks parool (Automatic Translation)
+keystore-exception=Seal oli probleem SAML võtmehoidjas. Palun pöörduge oma süsteemiadministraatori poole. (Automatic Translation)
+keystore-password-incorrect=Ei saa SAML võtmehoidjas autentimiseks. Palun pöörduge oma süsteemiadministraatori poole. (Automatic Translation)
 locality=Paikkonnas (Automatic Translation)
 metadata-url=Metaandmete URL (Automatic Translation)
 metadata-xml=Metaandmete XML (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Nimi identifikaatori atribuudi nimi (Automatic Tr
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=Nimi kood atribuuditüüp (Automatic Translation)
 name-identifier-format=Nimi kood vormi (Automatic Translation)
+new-identity-provider=Uue identiteedi pakkuja (Automatic Translation)
 new-service-provider=Uus (Automatic Translation)
 organization-unit=Organisatsiooniüksus (Automatic Translation)
 persistent=Püsiv (Automatic Translation)
-please-configure-identity-provider-before-enabling=Konfigureerige enne identiteedipakkuja. (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Looge enne allkirja mandaati. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Looge krüptimine mandaadi kui soovite krüptitud väiteid. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Sisestage unikaalne identiteet pakkuja üksuse ID (Automatic Translation)
 please-enter-a-unique-service-provider-entity-id=Sisestage kordumatu teenuse pakkuja üksuse ID (Automatic Translation)
 please-enter-a-valid-certificate-validity=Palun sisestage kehtiv kehtivuse. (Automatic Translation)
@@ -73,6 +80,7 @@ service-provider-defaults=Teenuse osutaja vaikesätted (Automatic Translation)
 service-provider-metadata-help=Kas URL-i teenuse pakkuja metaandmetele või metaandmete XML faili üles laadida. Kui sisestate URL värskendatakse perioodiliselt metaandmed. Veenduge, et metaandmete sisaldab teenusepakkuja allkirjasert. (Automatic Translation)
 signature-algorithm=Allkirja algoritm (Automatic Translation)
 subject-dn=Teema DN (Automatic Translation)
+there-are-no-identity-providers=Ei ühtegi isikut pakkujat. (Automatic Translation)
 there-are-no-service-providers=Ei ole teenusepakkujad. (Automatic Translation)
 transient=Mööduv (Automatic Translation)
 unspecified=Määramata (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=Kehtivus (päeva) (Automatic Translation)
 windows-domain-qualified-name=Windows kvalifitseeritud domeeninime (Automatic Translation)
 x509-subject-name=X509 teema nimi (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Konfigureerige ühe identiteedi pakkuja ühendus SAML funktsiooni. (Automatic Translation)
