--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fa.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fa.properties
@@ -1,4 +1,6 @@
+add-identity-provider=افزودن ارائه دهنده شناسه (Automatic Translation)
 add-service-provider=افزودن سرویس دهنده (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=آیا مطمئن هستید می خواهید این مجوز را از keystore حذف کنید؟ (Automatic Translation)
 assertion-lifetime=ادعای طول عمر (Automatic Translation)
 assertion-lifetime-help=طول عمر ادعای در ثانیه وارد کنید. (Automatic Translation)
 attribute-mapping=مشخصه نقشه برداری (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=مشخصات کاربری مطابق با نام مستع
 certificate-url=آدرس گواهی (Automatic Translation)
 common-name=نام معمول (Automatic Translation)
 create-certificate=ایجاد گواهی نامه (Automatic Translation)
+delete-certificate=حذف مجوز (Automatic Translation)
 download-certificate=دانلود گواهی (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=رمزگذاری شده (Automatic Translation)
+encryption-certificate-and-private-key=کلید خصوصی و گواهی کدگذاری (Automatic Translation)
 entity=نهاد (Automatic Translation)
 entity-id-help=نهاد ID شناسه منحصر به فرد است که می تواند تا 1024 نویسه است. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=نهاد ID باید قبل از کلید خصوصی تنظیم و گواهی تولید شده می تواند. (Automatic Translation)
 entity-id-too-long=شناسه نهاد بیش از 1024 نویسه است. (Automatic Translation)
 force-authn=نیروی Authn (Automatic Translation)
 force-authn-help=نیروی هویت دهنده به reauthenticate کاربر بدون در نظر گرفتن زمینه های امنیت موجود. (Automatic Translation)
-identity-provider=ارائه دهنده شناسه (Automatic Translation)
 identity-provider-connection=اتصال دهنده هویت (Automatic Translation)
 identity-provider-connection-entity-id-help=شناسه نهاد ارائه دهنده شناسه را وارد کنید. این مقدار شناسه نهاد اعلام شده در فوق داده ارائه دهنده شناسه مطابقت داشته باشد. (Automatic Translation)
+identity-provider-connections=اتصالات ارائه دهنده شناسه (Automatic Translation)
 identity-provider-metadata-help=ارائه هر دو URL به فراداده ارائه دهنده هویت و یا آپلود فایل XML ابرداده. هنگامی که URL را در اختیار ابرداده دوره ای به روز می شود. ابرداده شامل گواهی امضا ارائه دهنده هویت مطمئن شوید. (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=زنده نگه داشتن SAML (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=مدیر SAML (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Kerberos انجام نمی شود (Automatic Translation)
 key-algorithm=الگوریتم های کلید (Automatic Translation)
 key-length-bits=طول کلید (بیت) (Automatic Translation)
 key-password=کلید رمز (Automatic Translation)
+keystore-exception=مشکلی در بارگذاری SAML keystore. لطفا با سرپرست سیستم تماس بگیرید. (Automatic Translation)
+keystore-password-incorrect=قادر به شناسایی با SAML keystore. لطفا با سرپرست سیستم تماس بگیرید. (Automatic Translation)
 locality=محل (Automatic Translation)
 metadata-url=آدرس فوق داده (Automatic Translation)
 metadata-xml=فراداده کاپرفیلد (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=نام شناسه نام مشخصه (Automatic Tr
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=نام شناسه مشخصه نوع (Automatic Translation)
 name-identifier-format=نام شناسه فرمت (Automatic Translation)
+new-identity-provider=ارائه دهنده هویت جدید (Automatic Translation)
 new-service-provider=ارائه دهنده خدمات جدید (Automatic Translation)
 organization-unit=سازمان واحد (Automatic Translation)
 persistent=مداوم (Automatic Translation)
-please-configure-identity-provider-before-enabling=لطفا ارائه دهنده هویت قبل از فعال سازی پیکربندی کنید. (Automatic Translation)
 please-create-a-signing-credential-before-enabling=لطفا مشخصات کاربری ثبت قبل از فعال سازی ایجاد کنید. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=اگر می خواهید به اظهارات رمزگذاری شده از اعتبار رمزگذاری ایجاد. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=لطفا وارد کنید هویت منحصر به فرد ارائه دهنده شناسه نهاد (Automatic Translation)
 please-enter-a-unique-service-provider-entity-id=لطفا شناسه نهاد ارائه دهنده خدمات منحصر به فرد (Automatic Translation)
 please-enter-a-valid-certificate-validity=اعتبار گواهینامه معتبر را وارد کنید. (Automatic Translation)
@@ -73,6 +80,7 @@ service-provider-defaults=پیش فرض های ارائه دهنده خدمات 
 service-provider-metadata-help=ارائه هر دو URL به فراداده ارائه دهنده خدمات و یا آپلود فایل XML ابرداده. هنگامی که URL را در اختیار ابرداده دوره ای به روز می شود. ابرداده شامل گواهی امضا ارائه دهنده خدمات مطمئن شوید. (Automatic Translation)
 signature-algorithm=الگوریتم امضا (Automatic Translation)
 subject-dn=موضوع DN (Automatic Translation)
+there-are-no-identity-providers=هیچ ارائه دهنده هویت وجود دارد. (Automatic Translation)
 there-are-no-service-providers=هیچ سرویس دهنده وجود دارد. (Automatic Translation)
 transient=گذرا (Automatic Translation)
 unspecified=مشخص نشده (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=اعتبار (روز) (Automatic Translation)
 windows-domain-qualified-name=ویندوز نام دامنه واجد شرایط (Automatic Translation)
 x509-subject-name=X509 نام موضوع (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=شما باید حداقل یک هویت اتصال دهنده برای SAML به تابع را پیکربندی کنید. (Automatic Translation)
