--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fr.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_fr.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Ajouter le fournisseur d'identité (Automatic Translation)
 add-service-provider=Ajouter un fournisseur de service
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Êtes-vous sûr de que vouloir supprimer ce certificat dans le fichier de clés ? (Automatic Translation)
 assertion-lifetime=Longévité des assertions
 assertion-lifetime-help=Saisissez une longévité d'assertion en secondes.
 attribute-mapping=Mappage des attributs
@@ -18,18 +20,20 @@ certificate-needs-auth=Des données de connexion avec alias correspondant qui ex
 certificate-url=URL du certificat
 common-name=Nom ordinaire
 create-certificate=Créer un certificat
+delete-certificate=Supprimer le certificat (Automatic Translation)
 download-certificate=Télécharger le certificat
 dsa=DSA
 encrypted=Chiffré
+encryption-certificate-and-private-key=Certificat de chiffrement et la clé privée (Automatic Translation)
 entity=Entité
 entity-id-help=L'ID d'entité est un identificateur unique qui peut contenir jusqu'à 1024 caractères.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=L'ID d'entité doit être défini avant que la clé privée et le certificat puissent être générés.
 entity-id-too-long=L'ID d'entité contient plus de 1024 caractères.
 force-authn=Forcer Authn
 force-authn-help=Forcez le fournisseur d'identité pour authentifier de nouveau l'utilisateur, quel que soit le contexte de sécurité.
-identity-provider=Fournisseur d'identité
 identity-provider-connection=Connexion au fournisseur d'identité
 identity-provider-connection-entity-id-help=Saisissez l'ID d'entité du fournisseur d'identité. Cette valeur doit correspondre à l'ID d'entité déclaré dans les métadonnées du fournisseur d'identité.
+identity-provider-connections=Connexions de fournisseur d'identité (Automatic Translation)
 identity-provider-metadata-help=Fournissez une URL vers les métadonnées du fournisseur d'identité ou téléversez un fichier XML de métadonnées. Si vous fournissez une URL, les métadonnées sont régulièrement actualisées. Assurez-vous que les métadonnées contiennent le certificat signé du fournisseur d'identité.
 javax.portlet.title.1_WAR_samlportlet=Garder actif SAML
 javax.portlet.title.2_WAR_samlportlet=Admin SAML
@@ -38,6 +42,8 @@ kerberos=Kerberos
 key-algorithm=Algorithme de clé
 key-length-bits=Longueur des clés (Bits)
 key-password=Mot de passe de la clé
+keystore-exception=Il y avait un problème de chargement du fichier de clés SAML. S'il vous plaît contactez votre administrateur système. (Automatic Translation)
+keystore-password-incorrect=Impossible de s'authentifier avec le keystore SAML. S'il vous plaît contactez votre administrateur système. (Automatic Translation)
 locality=Localité
 metadata-url=URL des métadonnées
 metadata-xml=XML de métadonnées
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Nom de l'attribut de l'identificateur de nom
 name-identifier-attribute-name-help=Saisissez un nom d'attribut d'utilisateur comme <strong>emailAddress</strong> ou <strong>screenName</strong>. Vous pouvez aussi utiliser le préfixe <strong>static:</strong> pour utiliser une valeur statique, ou le préfixe <strong>expando:</strong> pour utiliser un attribut expando.
 name-identifier-attribute-type=Type d'attribut de l'identificateur de nom
 name-identifier-format=Format de l'identificateur de nom
+new-identity-provider=Nouveau fournisseur d'identité (Automatic Translation)
 new-service-provider=Nouveau fournisseur de service
 organization-unit=Unité d'organisation
 persistent=Persistent
-please-configure-identity-provider-before-enabling=Veuillez configurer le fournisseur d'identité avant d'activer.
 please-create-a-signing-credential-before-enabling=Veuillez créer des données de connexion avant d'activer.
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Veuillez créer des informations d'identification de chiffrement si vous souhaitez que les assertions cryptées. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Veuillez saisir un ID d'entité de fournisseur d'identité unique.
 please-enter-a-unique-service-provider-entity-id=Veuillez saisir un ID d'entité de fournisseur de service unique.
 please-enter-a-valid-certificate-validity=Veuillez saisir une validité de certificat valide.
@@ -73,6 +80,7 @@ service-provider-defaults=Défauts du fournisseur de service
 service-provider-metadata-help=Fournissez une URL vers les métadonnées du fournisseur de service ou téléversez un fichier XML de métadonnées. Si vous fournissez une URL, les métadonnées sont régulièrement actualisées. Assurez-vous que les métadonnées contiennent le certificat signé du fournisseur de service.
 signature-algorithm=Algorithme de signature
 subject-dn=DN objet
+there-are-no-identity-providers=Il n'y a aucun fournisseur d'identité. (Automatic Translation)
 there-are-no-service-providers=Il n'y a aucun fournisseur de service.
 transient=Transitoire
 unspecified=Non spécifié
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valide du {0} au {1}.
 validity-days=Validité (jours)
 windows-domain-qualified-name=Nom qualifié du domaine Windows
 x509-subject-name=Nom du sujet X509
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Vous devez configurer la connexion du fournisseur au moins une identité pour SAML pour fonctionner. (Automatic Translation)
