--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_hu.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_hu.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Identitás-szolgáltató felvétele (Automatic Translation)
 add-service-provider=Szolgáltató hozzáadása
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Biztosan törli ezt a tanúsítványt a a keystore? (Automatic Translation)
 assertion-lifetime=Az előfeltétel élettartama
 assertion-lifetime-help=Adja meg az előfeltétel élettartamát másodpercben.
 attribute-mapping=Attribútum-hozzárendelés
@@ -18,18 +20,20 @@ certificate-needs-auth=A megfelelő aliashoz tartozó hitelesítőadat már lét
 certificate-url=Tanúsítvány URL-címe
 common-name=Köznapi név
 create-certificate=Tanúsítvány létrehozása
+delete-certificate=Tanúsítvány törlése (Automatic Translation)
 download-certificate=Tanúsítvány letöltése
 dsa=DSA
 encrypted=Titkosított
+encryption-certificate-and-private-key=Titkosítási tanúsítványt és a személyes kulcs (Automatic Translation)
 entity=Entitás
 entity-id-help=Az entitásazonosító egy legfeljebb 1024 karakter hosszúságú egyedi azonosító.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=A privát kulcs és a tanúsítvány generálása előtt be kell állítani az entitásazonosítót.
 entity-id-too-long=Az entitásazonosító hossza túllépte az 1024 karaktert.
 force-authn=Kényszerjóváhagyás
 force-authn-help=Kényszeríti az identitásszolgáltatót, hogy a felhasználót a meglévő biztonsági környezetre való tekintet nélkül újra hitelesítse.
-identity-provider=Identitásszolgáltató
 identity-provider-connection=Identitásszolgáltató kapcsolata
 identity-provider-connection-entity-id-help=Írja be az identitásszolgáltató entitás-azonosítóját. Az értéknek meg kell egyeznie az identitásszolgáltató metaadataiban megadott entitás-azonosítóval.
+identity-provider-connections=Identitás szolgáltatókapcsolatok (Automatic Translation)
 identity-provider-metadata-help=Adja meg az identitásszolgáltató metaadatainak az URL-címét, vagy töltsön fel egy XML-fájlt a metaadatokkal. Ha URL-címet ad meg, a metaadatok rendszeresen frissítődnek majd. Győződjön meg róla, hogy a metaadatok tartalmazzák az identitásszolgáltató aláírási tanúsítványát.
 javax.portlet.title.1_WAR_samlportlet=Életben tartott SAML
 javax.portlet.title.2_WAR_samlportlet=SAML adminisztrátor
@@ -38,6 +42,8 @@ kerberos=Kerberos
 key-algorithm=Kulcsalgoritmus
 key-length-bits=Kulcs hossza (bit)
 key-password=Kulcs jelszava
+keystore-exception=Ott volt egy probléma betöltése a SAML keystore. Kérjük, forduljon a rendszergazdához. (Automatic Translation)
+keystore-password-incorrect=Képtelen-hoz hitelesít-val a SAML keystore. Kérjük, forduljon a rendszergazdához. (Automatic Translation)
 locality=Hely
 metadata-url=Metaadatok URL-címe
 metadata-xml=Metaadatok XML-fájlja
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Névazonosító attribútumneve
 name-identifier-attribute-name-help=Adjon meg egy attribútumnevet, például <strong>emailAddress</strong> vagy <strong>screenName</strong>. Alternatívaként használhatja a <strong>static:</strong> előtagot statikus érték, vagy a <strong>expando:</strong> előtagot expando attribútum használatához.
 name-identifier-attribute-type=Névazonosító attribútumtípusa
 name-identifier-format=Névazonosító formátuma
+new-identity-provider=Új identitásszolgáltató (Automatic Translation)
 new-service-provider=Új szolgáltató
 organization-unit=Szervezeti egység
 persistent=Állandó
-please-configure-identity-provider-before-enabling=Az engedélyezés előtt konfigurálja az identitásszolgáltatót.
 please-create-a-signing-credential-before-enabling=Engedélyezés előtt hozzon létre aláírási hitelesítőadatokat.
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Kérjük, hozzon létre egy titkosított hitelesítő adatok ha assertions, titkosított. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Adja meg egy identitásazonosító egyedi entitásazonosítóját.
 please-enter-a-unique-service-provider-entity-id=Adja meg egy szolgáltató egyedi entitásazonosítóját.
 please-enter-a-valid-certificate-validity=Adjon meg egy érvényes tanúsítványhitelesítést.
@@ -73,6 +80,7 @@ service-provider-defaults=Szolgáltató alapértelmezett adatai
 service-provider-metadata-help=Adja meg a szolgáltató metaadatainak az URL-címét, vagy töltsön fel egy XML-fájlt a metaadatokkal. Ha URL-címet ad meg, a metaadatok rendszeresen frissítődnek majd. Győződjön meg róla, hogy a metaadatok tartalmazzák a szolgáltató aláírási tanúsítványát.
 signature-algorithm=Aláírás-algoritmus
 subject-dn=Tulajdonos DN
+there-are-no-identity-providers=Vannak nem Identitásszolgáltatók. (Automatic Translation)
 there-are-no-service-providers=Nincsenek szolgáltatók.
 transient=Tranziens
 unspecified=Nincs megadva
@@ -85,3 +93,4 @@ valid-from-x-until-x=Érvényes {0} és {1} között.
 validity-days=Érvényesség (napokban)
 windows-domain-qualified-name=Windows minősített tartománynév
 x509-subject-name=X509 tulajdonos neve
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Be kell állítania legalább egy identitás szolgáltató kapcsolat a SAML működését. (Automatic Translation)
