--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_iw.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_iw.properties
@@ -1,4 +1,6 @@
+add-identity-provider=הוסף ספק זהות (Automatic Translation)
 add-service-provider=הוסף ספק שירות
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=האם אתה בטוח שברצונך למחוק אישור זה keystore? (Automatic Translation)
 assertion-lifetime=משך חיי הקביעה
 assertion-lifetime-help=הזן את אורך החיים של הקביעה בשניות.
 attribute-mapping=מיפוי תכונות
@@ -18,18 +20,20 @@ certificate-needs-auth=אישור עם כינוי מתאים כבר קיים ב-
 certificate-url=כתובת URL של האישור
 common-name=שם כללי
 create-certificate=צור אישור
+delete-certificate=למחוק אישור (Automatic Translation)
 download-certificate=הורד אישור
 dsa=DSA
 encrypted=מוצפן
+encryption-certificate-and-private-key=אישור ההצפנה ואת מפתח פרטי (Automatic Translation)
 entity=ישות
 entity-id-help=מזהה ישות הוא מזהה ייחודי באורך של עד 1024 תווים.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=מזהה הישות חייב להיות מוגדר לפני הפקת מפתח פרטי ואישור.
 entity-id-too-long=מזהה הישות ארוך יותר מ-1024 תווים.
 force-authn=חייב אימות
 force-authn-help=חייב את ספק הזהות לאמת מחדש את המשתמש ללא קשר לקונטקסט האבטחה הקיים.
-identity-provider=ספק זהויות
 identity-provider-connection=קישור ספק זהויות
 identity-provider-connection-entity-id-help=הזן את מזהה הישות של ספק הזהויות. ערך זה חייב להתאים למזהה הישות שמוגדר במטא-דאטה של ספק הזהויות.
+identity-provider-connections=חיבורים ספק זהות (Automatic Translation)
 identity-provider-metadata-help=ספק כתובת URL עבור המטא-דאטה של ספק הזהויות או העלה קובץ XML של מטא-דאטה. כאשר אתה מספק כתובת URL, המטא-דאטה מתעדכן מעת לעת. ודא שהמטא-דאטה מכיל את אישור החתימה של ספק הזהויות.
 javax.portlet.title.1_WAR_samlportlet=שמור בחיים של SAML
 javax.portlet.title.2_WAR_samlportlet=מנהל מערכת SAML
@@ -38,6 +42,8 @@ kerberos=Kerberos
 key-algorithm=אלגוריתם מפתח
 key-length-bits=אורך המפתח (ביטים)
 key-password=סיסמת המפתח
+keystore-exception=אירעה בעיה לטעון keystore של SAML. פנה אל מנהל המערכת. (Automatic Translation)
+keystore-password-incorrect=אין אפשרות לבצע אימות עם keystore SAML. פנה אל מנהל המערכת. (Automatic Translation)
 locality=מקומיות
 metadata-url=כתובת URL של מטא-דאטה
 metadata-xml=XML של מטא-דאטה
@@ -47,11 +53,12 @@ name-identifier-attribute-name=שם תכונת מזהה שם
 name-identifier-attribute-name-help=הזן שם תכונת משתמש כגון <strong>emailAddress</strong> או <strong>screenName</strong>. לחלופין, באפשרותך להשתמש בקידומת <strong>סטטי:</strong> לשימוש בערך סטטי או בקידומת <strong>expando:</strong> לשימוש בתכונת expando.
 name-identifier-attribute-type=שם תכונת מזהה שם
 name-identifier-format=פורמט מזהה שם
+new-identity-provider=ספק זהות חדשה (Automatic Translation)
 new-service-provider=ספק שירות חדש
 organization-unit=יחידה ארגונית
 persistent=קבוע
-please-configure-identity-provider-before-enabling=אנא הגדר את ספק הזהויות לפני ההפעלה.
 please-create-a-signing-credential-before-enabling=אנא צור אישור חתימה לפני ההפעלה.
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=בבקשה ליצור אישור ההצפנה של אם תרצו הנחרצות מוצפן. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=אנא הזן מזהה ישות של ספק זהויות ייחודי.
 please-enter-a-unique-service-provider-entity-id=אנא הזן מזהה ישות של ספק שירות ייחודי.
 please-enter-a-valid-certificate-validity=אנא הזן תוקף אישור חוקי.
@@ -73,6 +80,7 @@ service-provider-defaults=ברירות המחדל של ספק השירות
 service-provider-metadata-help=ספק כתובת URL עבור המטא-דאטה של ספק השירות או העלה קובץ XML של מטא-דאטה. כאשר אתה מספק כתובת URL, המטא-דאטה מתעדכן מעת לעת. ודא שהמטא-דאטה מכיל את אישור החתימה של ספק השירות.
 signature-algorithm=אלגוריתם החתימה
 subject-dn=DN הנושא
+there-are-no-identity-providers=ישנם ספקי אין זהות. (Automatic Translation)
 there-are-no-service-providers=אין ספקי שירות.
 transient=ארעי
 unspecified=לא מפורט
@@ -85,3 +93,4 @@ valid-from-x-until-x=תקף מ-{0} עד {1}.
 validity-days=תוקף (ימים)
 windows-domain-qualified-name=השם המסווג של דומיין Windows
 x509-subject-name=X509 שם הנושא
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=עליך להגדיר זהות אחת לפחות ספק החיבור SAML לפונקציה. (Automatic Translation)
