--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ko.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ko.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Id 공급자 추가 (Automatic Translation)
 add-service-provider=서비스 공급자 추가 (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=당신은 키에서이 인증서를 삭제 하 시겠습니까? (Automatic Translation)
 assertion-lifetime=어설션 수명 (Automatic Translation)
 assertion-lifetime-help=초 어설션 일생을 입력 합니다. (Automatic Translation)
 attribute-mapping=특성 매핑 (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=일치 하는 자격 증명 별칭 이미 SAML 키에 존
 certificate-url=인증서 URL (Automatic Translation)
 common-name=일반 이름 (Automatic Translation)
 create-certificate=인증서 만들기 (Automatic Translation)
+delete-certificate=인증서 삭제 (Automatic Translation)
 download-certificate=인증서 다운로드 (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=암호화 (Automatic Translation)
+encryption-certificate-and-private-key=암호화 인증서와 개인 키 (Automatic Translation)
 entity=엔터티 (Automatic Translation)
 entity-id-help=엔터티 ID는 1024 자까지 될 수 있는 고유 식별자입니다. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=엔터티 ID는 개인 키 전에 설정 해야 하 고 인증서를 생성할 수 있습니다. (Automatic Translation)
 entity-id-too-long=엔터티 ID는 더 이상 1024 문자입니다. (Automatic Translation)
 force-authn=힘 Authn (Automatic Translation)
 force-authn-help=기존 보안 컨텍스트에 관계 없이 사용자를 다시 인증을 강제로 id 공급자. (Automatic Translation)
-identity-provider=Id 공급자 (Automatic Translation)
 identity-provider-connection=신원 공급자 연결 (Automatic Translation)
 identity-provider-connection-entity-id-help=Id 공급자의 엔터티 ID를 입력 합니다. 이 값은 정체성 공급자 메타 데이터에서 선언 된 엔터티 ID를 일치 해야 합니다. (Automatic Translation)
+identity-provider-connections=신원 공급자 연결 (Automatic Translation)
 identity-provider-metadata-help=메타 데이터 XML 파일을 업로드 또는 정체성 공급자 메타 데이터에 대 한 어느 URL을 제공 합니다. URL을 제공 하는 경우 메타 데이터는 주기적으로 업데이트. Id 공급자의 서명 인증서를 포함 하는 메타 데이터 다는 것을 확인 하십시오. (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=SAML 살리기 (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=SAML 관리자 (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Kerberos (Automatic Translation)
 key-algorithm=키 알고리즘 (Automatic Translation)
 key-length-bits=키 길이 (비트) (Automatic Translation)
 key-password=키 암호 (Automatic Translation)
+keystore-exception=SAML 키 로드 문제가 있었습니다. 시스템 관리자에 문의 하십시오. (Automatic Translation)
+keystore-password-incorrect=SAML 키 인증할 수 없습니다. 시스템 관리자에 문의 하십시오. (Automatic Translation)
 locality=지역성 (Automatic Translation)
 metadata-url=메타 데이터 URL (Automatic Translation)
 metadata-xml=메타 데이터 XML (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=이름 식별자 특성 이름 (Automatic Transla
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=이름 식별자 특성 종류 (Automatic Translation)
 name-identifier-format=이름 식별자 형식 (Automatic Translation)
+new-identity-provider=새 Id 공급자 (Automatic Translation)
 new-service-provider=새로운 서비스 제공 업체 (Automatic Translation)
 organization-unit=조직 구성 단위 (Automatic Translation)
 persistent=영구 (Automatic Translation)
-please-configure-identity-provider-before-enabling=사용 하기 전에 id 공급자를 구성 하십시오. (Automatic Translation)
 please-create-a-signing-credential-before-enabling=사용 하기 전에 서명 자격 증명을 만드십시오. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=제발 어설션 암호화 하려면 암호화 자격 증명을 만듭니다. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=입력 하는 고유 id 공급자 엔터티 id입니다. (Automatic Translation)
 please-enter-a-unique-service-provider-entity-id=고유 서비스 공급자 엔터티 id입니다.를 입력 하십시오. (Automatic Translation)
 please-enter-a-valid-certificate-validity=유효한 인증서 유효 기간을 입력 하십시오. (Automatic Translation)
@@ -73,6 +80,7 @@ service-provider-defaults=서비스 공급자 기본값 (Automatic Translation)
 service-provider-metadata-help=메타 데이터 XML 파일을 업로드 또는 서비스 공급자 메타 데이터에 대 한 URL 중 하나를 제공 합니다. URL을 제공 하는 경우 메타 데이터는 주기적으로 업데이트. 메타 데이터는 서비스 공급자의 서명 인증서를 포함 하 고 있는지 확인 합니다. (Automatic Translation)
 signature-algorithm=서명 알고리즘 (Automatic Translation)
 subject-dn=주제 DN (Automatic Translation)
+there-are-no-identity-providers=없는 id 공급자가 있다. (Automatic Translation)
 there-are-no-service-providers=거기에 서비스 공급자가 없습니다. (Automatic Translation)
 transient=과도 (Automatic Translation)
 unspecified=지정 되지 않은 (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=유효 기간 (일) (Automatic Translation)
 windows-domain-qualified-name=Windows 도메인의 정규화 된 이름 (Automatic Translation)
 x509-subject-name=X 509 주체 이름 (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=적어도 하나의 정체성 공급자 연결 SAML에 대 한 기능을 구성 해야 합니다. (Automatic Translation)
