--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_nl.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_nl.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Add Identity Provider (Automatic Copy)
 add-service-provider=Serviceprovider toevoegen
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
 assertion-lifetime=Levensduur bewering
 assertion-lifetime-help=Voer de levensduur van de bewering in seconden in.
 attribute-mapping=Toewijzing kenmerk
@@ -18,18 +20,20 @@ certificate-needs-auth=Er bestaat al een legitimatie met bijbehorende alias in d
 certificate-url=URL certificaat
 common-name=Algemene naam
 create-certificate=Certificaat maken
+delete-certificate=Delete Certificate (Automatic Copy)
 download-certificate=Certificaat downloaden
 dsa=DSA
 encrypted=Gecodeerd
+encryption-certificate-and-private-key=Encryption Certificate and Private Key (Automatic Copy)
 entity=Entiteit
 entity-id-help=De entiteit-ID is een unieke ID die tot 1.024 tekens lang kan zijn.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=De entiteit-ID moet worden ingesteld voordat de private sleutel en het certificaat kunnen worden gegenereerd.
 entity-id-too-long=De entiteit-ID is meer dan 1.024 tekens lang.
 force-authn=Authenticatie forceren
 force-authn-help=De identiteitsprovider dwingen om de gebruiker opnieuw te authenticeren ongeacht de bestaande beveiligingscontext.
-identity-provider=Identiteitsprovider
 identity-provider-connection=Verbinding identiteitsprovider
 identity-provider-connection-entity-id-help=Voer de entiteit-ID van de identiteitsprovider in. Deze waarde moet overeenkomen met de entiteit-ID die opgegeven is in de metadata van de identiteitsprovider.
+identity-provider-connections=Identity Provider Connections (Automatic Copy)
 identity-provider-metadata-help=Geef ofwel een URL op aan de metadata van de identiteitsprovider, of upload een metadata XML-bestand. Wanneer u een URL opgeeft, worden de metadata regelmatig bijgewerkt. Zorg ervoor dat de metadata het handtekeningcertificaat van de identiteitsprovider bevatten.
 javax.portlet.title.1_WAR_samlportlet=SAML Keep Alive
 javax.portlet.title.2_WAR_samlportlet=SAML-beheerder
@@ -38,6 +42,8 @@ kerberos=Kerberos
 key-algorithm=Sleutelalgoritme
 key-length-bits=Sleutellengte (Bit)
 key-password=Sleutelwachtwoord
+keystore-exception=There was a problem loading the SAML keystore. Please contact your system administrator. (Automatic Copy)
+keystore-password-incorrect=Unable to authenticate with the SAML keystore. Please contact your system administrator. (Automatic Copy)
 locality=Plaats
 metadata-url=URL metadata
 metadata-xml=XML metadata
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Naam kenmerk naam identificatie-element
 name-identifier-attribute-name-help=Voer namen voor gebruikerskenmerken in zoals <strong>emailAddress</strong> of <strong>screenName</strong>. U kunt ook het voorvoegsel <strong>static:</strong> gebruiken voor een statische waarde, of <strong>expando:</strong> voor een expando-kenmerk.
 name-identifier-attribute-type=Type kenmerk naam identificatie-element
 name-identifier-format=Naam indeling identificatie-element
+new-identity-provider=New Identity Provider (Automatic Copy)
 new-service-provider=Nieuwe serviceprovider
 organization-unit=Organisatie-eenheid
 persistent=Persistent
-please-configure-identity-provider-before-enabling=Configureer de identiteitsprovider voorafgaand aan het inschakelen.
 please-create-a-signing-credential-before-enabling=Maak een ondertekeningslegitimatie voorafgaand aan het inschakelen.
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Please create an encryption credential if you want assertions encrypted. (Automatic Copy)
 please-enter-a-unique-identity-provider-entity-id=Voer een unieke entiteit-ID in voor de identiteitsprovider.
 please-enter-a-unique-service-provider-entity-id=Voer een unieke entiteit-ID in voor de serviceprovider.
 please-enter-a-valid-certificate-validity=Voer een geldige geldigheidsduur in voor het certificaat.
@@ -73,6 +80,7 @@ service-provider-defaults=Standaardinstellingen serviceprovider
 service-provider-metadata-help=Geef ofwel een URL op aan de metadata van de serviceprovider, of upload een metadata XML-bestand. Wanneer u een URL opgeeft, worden de metadata regelmatig bijgewerkt. Zorg ervoor dat de metadata het handtekeningcertificaat van de serviceprovider bevatten.
 signature-algorithm=Algoritme voor ondertekening
 subject-dn=DN onderwerp
+there-are-no-identity-providers=There are no identity providers. (Automatic Copy)
 there-are-no-service-providers=Er zijn geen serviceproviders.
 transient=Tijdelijk
 unspecified=Niet gespecificeerd
@@ -85,3 +93,4 @@ valid-from-x-until-x=Geldig van {0} tot {1}.
 validity-days=Geldigheid (dagen)
 windows-domain-qualified-name=Gekwalificeerde naam Windowsdomein
 x509-subject-name=X509 naam onderwerp
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function. (Automatic Copy)
