--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_nl_BE.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Add Identity Provider (Automatic Copy)
 add-service-provider=Serviceprovider toevoegen (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
 assertion-lifetime=Bewering levensduur (Automatic Translation)
 assertion-lifetime-help=Voer de bewering levensduur in seconden. (Automatic Translation)
 attribute-mapping=Kenmerk Mapping (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=A credential with matching alias already exists in the SA
 certificate-url=Certificaat URL (Automatic Translation)
 common-name=Algemene naam (Automatic Translation)
 create-certificate=Certificaat maken (Automatic Translation)
+delete-certificate=Delete Certificate (Automatic Copy)
 download-certificate=Download certificaat (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Gecodeerd (Automatic Translation)
+encryption-certificate-and-private-key=Encryption Certificate and Private Key (Automatic Copy)
 entity=Entiteit (Automatic Translation)
 entity-id-help=Entiteit-ID is een unieke id die tot 1024 tekens oplopen kan. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Entiteit-ID moet worden ingesteld voordat de persoonlijke sleutel en het certificaat kan worden gegenereerd. (Automatic Translation)
 entity-id-too-long=Entity ID is more than 1024 characters long. (Automatic Copy)
 force-authn=Kracht Authn (Automatic Translation)
 force-authn-help=Dwingen identiteitsprovider om andere referenties van de gebruiker ongeacht bestaande beveiligingscontext. (Automatic Translation)
-identity-provider=Identiteitsprovider (Automatic Translation)
 identity-provider-connection=Identiteit Provider verbinding (Automatic Translation)
 identity-provider-connection-entity-id-help=Voer de entiteit-ID van de identiteitsprovider. Deze waarde moet overeenkomen met de entiteit-ID in de metagegevens van de provider identiteit verklaard. (Automatic Translation)
+identity-provider-connections=Identity Provider Connections (Automatic Copy)
 identity-provider-metadata-help=Of een URL naar de identiteit provider metagegevens of upload een metadata XML-bestand. Wanneer u een URL opgeeft, worden de metagegevens wordt regelmatig bijgewerkt. Zorg ervoor dat de metagegevens bevat het handtekeningcertificaat van de identiteitsprovider. (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=SAML levend houden (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=SAML Admin (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Kerberos (Automatic Translation)
 key-algorithm=-Sleutel algorithme (Automatic Translation)
 key-length-bits=Sleutellengte (Bits) (Automatic Translation)
 key-password=Wachtwoord voor sleutel (Automatic Translation)
+keystore-exception=There was a problem loading the SAML keystore. Please contact your system administrator. (Automatic Copy)
+keystore-password-incorrect=Unable to authenticate with the SAML keystore. Please contact your system administrator. (Automatic Copy)
 locality=Plaats (Automatic Translation)
 metadata-url=Metagegevens URL (Automatic Translation)
 metadata-xml=Metadata XML (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Naam van het id-kenmerk (Automatic Translation)
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=Naam id attribuut Type (Automatic Translation)
 name-identifier-format=Naam id formaat (Automatic Translation)
+new-identity-provider=New Identity Provider (Automatic Copy)
 new-service-provider=Nieuwe serviceprovider (Automatic Translation)
 organization-unit=Organisatie-eenheid (Automatic Translation)
 persistent=Persistent (Automatic Translation)
-please-configure-identity-provider-before-enabling=Gelieve identiteitsprovider configureren voordat u inschakelt. (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Maak een ondertekening referentie voordat u inschakelt. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Please create an encryption credential if you want assertions encrypted. (Automatic Copy)
 please-enter-a-unique-identity-provider-entity-id=Please enter a unique identity provider entity ID. (Automatic Copy)
 please-enter-a-unique-service-provider-entity-id=Voer een unieke serviceprovider entiteit. (Automatic Translation)
 please-enter-a-valid-certificate-validity=Please enter a valid certificate validity. (Automatic Copy)
@@ -73,6 +80,7 @@ service-provider-defaults=Serviceprovider Defaults (Automatic Translation)
 service-provider-metadata-help=Of een URL naar de metadata serviceprovider of een metadata XML-bestand uploaden. Wanneer u een URL opgeeft, worden de metagegevens wordt regelmatig bijgewerkt. Zorg ervoor dat de metagegevens bevat het handtekeningcertificaat van de dienstverlener. (Automatic Translation)
 signature-algorithm=Handtekeningalgoritme (Automatic Translation)
 subject-dn=Onderwerp DN (Automatic Translation)
+there-are-no-identity-providers=There are no identity providers. (Automatic Copy)
 there-are-no-service-providers=Er zijn geen serviceproviders. (Automatic Translation)
 transient=Voorbijgaande aard (Automatic Translation)
 unspecified=Niet-gespecificeerde (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=Geldigheid (dagen) (Automatic Translation)
 windows-domain-qualified-name=Gekwalificeerde Windows-domeinnaam (Automatic Translation)
 x509-subject-name=X 509 objectnaam (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function. (Automatic Copy)
