--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_pt_PT.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Adicionar provedor de identidade (Automatic Translation)
 add-service-provider=Adicionar provedor de serviço (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Tem certeza que deseja excluir este certificado do armazenamento de chaves? (Automatic Translation)
 assertion-lifetime=Vida de afirmação (Automatic Translation)
 assertion-lifetime-help=Digite o tempo de vida de afirmação em segundos. (Automatic Translation)
 attribute-mapping=Mapeamento de atributos (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=A credential with matching alias already exists in the SA
 certificate-url=URL de certificado (Automatic Translation)
 common-name=Nome comum (Automatic Translation)
 create-certificate=Criar certificado (Automatic Translation)
+delete-certificate=Excluir o certificado (Automatic Translation)
 download-certificate=Download certificado (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Criptografado (Automatic Translation)
+encryption-certificate-and-private-key=Certificado de criptografia e chave privada (Automatic Translation)
 entity=Entidade (Automatic Translation)
 entity-id-help=Entidade ID é um identificador exclusivo que pode ser até 1024 caracteres de comprimento. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Identificação da entidade deve ser definida antes da chave privada e certificado pode ser gerado. (Automatic Translation)
 entity-id-too-long=ID da entidade é mais do que 1024 caracteres de comprimento. (Automatic Translation)
 force-authn=Força Authn (Automatic Translation)
 force-authn-help=Forçar o provedor de identidade para autenticar o usuário, independentemente do contexto de segurança existente. (Automatic Translation)
-identity-provider=Provedor de identidade (Automatic Translation)
 identity-provider-connection=Conexão do provedor de identidade (Automatic Translation)
 identity-provider-connection-entity-id-help=Insira o ID de entidade do provedor de identidade. Este valor deve coincidir com o ID de entidade declarada nos metadados do provedor de identidade. (Automatic Translation)
+identity-provider-connections=Conexões do provedor de identidade (Automatic Translation)
 identity-provider-metadata-help=Fornecer uma URL para os metadados do provedor de identidade ou carregar um arquivo XML de metadados. Quando você fornecer um URL, os metadados é atualizado periodicamente. Certificar-se de que os metadados contém o certificado de assinatura do provedor de identidade. (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=SAML manter vivo (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=Admin SAML (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Kerberos (Automatic Translation)
 key-algorithm=Algoritmo de chave (Automatic Translation)
 key-length-bits=Comprimento da chave (Bits) (Automatic Translation)
 key-password=Senha chave (Automatic Translation)
+keystore-exception=Houve um problema ao carregar o keystore SAML. Por favor, contate o administrador do sistema. (Automatic Translation)
+keystore-password-incorrect=Não é possível autenticar com o keystore SAML. Por favor, contate o administrador do sistema. (Automatic Translation)
 locality=Localidade (Automatic Translation)
 metadata-url=URL de metadados (Automatic Translation)
 metadata-xml=Metadados XML (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Nome de atributo do identificador de nome (Automa
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=Tipo de atributo do identificador de nome (Automatic Translation)
 name-identifier-format=Formato do nome do identificador (Automatic Translation)
+new-identity-provider=Novo provedor de identidade (Automatic Translation)
 new-service-provider=Novo provedor de serviço (Automatic Translation)
 organization-unit=Unidade de organização (Automatic Translation)
 persistent=Persistente (Automatic Translation)
-please-configure-identity-provider-before-enabling=Por favor, configure o provedor de identidade antes de ativar. (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Por favor, crie uma credencial de autenticação antes de ativar. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Por favor, crie uma credencial de criptografia se quiser asserções criptografadas. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Por favor insira um provedor de identidade única entidade ID. (Automatic Translation)
 please-enter-a-unique-service-provider-entity-id=Por favor, indique uma entidade de provedor de serviço único ID. (Automatic Translation)
 please-enter-a-valid-certificate-validity=Please enter a valid certificate validity. (Automatic Copy)
@@ -73,6 +80,7 @@ service-provider-defaults=Padrões de provedor de serviço (Automatic Translatio
 service-provider-metadata-help=Fornecer uma URL para o provedor de serviço de metadados ou carregar um arquivo XML de metadados. Quando você fornecer um URL, os metadados é atualizado periodicamente. Certificar-se de que os metadados contém o certificado de assinatura do prestador de serviços. (Automatic Translation)
 signature-algorithm=Algoritmo de assinatura (Automatic Translation)
 subject-dn=Assunto DN (Automatic Translation)
+there-are-no-identity-providers=Não há nenhum provedor de identidade. (Automatic Translation)
 there-are-no-service-providers=Não há nenhum prestadores de serviços. (Automatic Translation)
 transient=Transiente (Automatic Translation)
 unspecified=Não especificado. (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=Validade (dias) (Automatic Translation)
 windows-domain-qualified-name=Qualificado nome de domínio do Windows (Automatic Translation)
 x509-subject-name=X 509 assunto nome (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Você deve configurar a conexão de provedor de identidade de pelo menos um para SAML para função. (Automatic Translation)
