--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ro.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_ro.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Adauga furnizor de identitate (Automatic Translation)
 add-service-provider=Adauga furnizor de servicii (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Sigur ștergeți acest certificat la keystore? (Automatic Translation)
 assertion-lifetime=Afirmaţia Lifetime (Automatic Translation)
 assertion-lifetime-help=Intre viata de afirmare în câteva secunde. (Automatic Translation)
 attribute-mapping=Maparea atributului (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=O acreditare cu potrivire alias deja există în SAML key
 certificate-url=Certificat URL (Automatic Translation)
 common-name=Nume comun (Automatic Translation)
 create-certificate=Crea certificat (Automatic Translation)
+delete-certificate=Ştergeţi certificat (Automatic Translation)
 download-certificate=Descarca certificat (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Criptate (Automatic Translation)
+encryption-certificate-and-private-key=Certificat de criptare şi cheie privată (Automatic Translation)
 entity=Entitate (Automatic Translation)
 entity-id-help=ID entitate este un identificator unic, care poate fi de până la 1024 de caractere. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=ID entitate se setează înaintea cheia privată şi certificatul pot fi generate. (Automatic Translation)
 entity-id-too-long=ID entitate este mai mare de 1024 de caractere. (Automatic Translation)
 force-authn=Vigoare Authn (Automatic Translation)
 force-authn-help=Vigoare furnizorul de identitate pentru a reauthenticate utilizator indiferent de context de securitate existente. (Automatic Translation)
-identity-provider=Furnizor de identitate (Automatic Translation)
 identity-provider-connection=Conexiune de furnizor de identitate (Automatic Translation)
 identity-provider-connection-entity-id-help=Introduceţi ID-ul entităţii de către furnizorul de identitate. Această valoare trebuie să se potrivească ID entitate declarată în metadate de furnizor de identitate. (Automatic Translation)
+identity-provider-connections=Conexiuni de furnizor de identitate (Automatic Translation)
 identity-provider-metadata-help=Oferi fie un URL la identitatea furnizorului metadate sau încărcaţi un fişier XML de metadate. Când furnizaţi o adresă URL, metadate este actualizat periodic. Asiguraţi-vă că metadatele conţine certificat de semnare de către furnizorul de identitate. (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=SAML ţine în viaţă (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=SAML Admin (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Kerberos (Automatic Translation)
 key-algorithm=Cheie algoritm (Automatic Translation)
 key-length-bits=Lungime de cheie (Bits) (Automatic Translation)
 key-password=Parola cheie (Automatic Translation)
+keystore-exception=Acolo a fost o problemă la încărcarea SAML keystore. Vă rugăm să contactaţi administratorul de sistem. (Automatic Translation)
+keystore-password-incorrect=Imposibilitatea de a autentifica cu SAML keystore. Vă rugăm să contactaţi administratorul de sistem. (Automatic Translation)
 locality=Localitatea (Automatic Translation)
 metadata-url=URL-ul de metadate (Automatic Translation)
 metadata-xml=Metadate XML (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Identificator atribut nume (Automatic Translation
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=Nume identificator atribut tip (Automatic Translation)
 name-identifier-format=Nume identificator Format (Automatic Translation)
+new-identity-provider=Noul furnizor de identitate (Automatic Translation)
 new-service-provider=Noul furnizor de servicii (Automatic Translation)
 organization-unit=Unitatea de organizare (Automatic Translation)
 persistent=Persistente (Automatic Translation)
-please-configure-identity-provider-before-enabling=Vă rugăm să configuraţi furnizor de identitate înainte de a activa. (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Vă rugăm să creaţi o semnătură de acreditare înainte de activarea. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Vă rugăm să creaţi o acreditare de criptare dacă doriţi afirmaţiile criptate. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Vă rugăm să introduceţi un furnizor identitate unica entitate ID. (Automatic Translation)
 please-enter-a-unique-service-provider-entity-id=Vă rugăm să introduceţi un serviciu unic furnizor de entitate de identitate. (Automatic Translation)
 please-enter-a-valid-certificate-validity=Vă rugăm să introduceţi o valabilitate certificat valabil. (Automatic Translation)
@@ -73,6 +80,7 @@ service-provider-defaults=Furnizor de servicii implicite (Automatic Translation)
 service-provider-metadata-help=Oferi fie un URL serviciu provider metadate sau încărcaţi un fişier XML de metadate. Când furnizaţi o adresă URL, metadate este actualizat periodic. Asiguraţi-vă că metadatele conţine certificat de semnare a furnizorului. (Automatic Translation)
 signature-algorithm=Algoritmul semnăturii (Automatic Translation)
 subject-dn=Subiect DN (Automatic Translation)
+there-are-no-identity-providers=Nu sunt nici furnizorii de identitate. (Automatic Translation)
 there-are-no-service-providers=Nu sunt nici furnizorii de servicii. (Automatic Translation)
 transient=Tranzitorii (Automatic Translation)
 unspecified=Nespecificat (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=Valabilitate (zile) (Automatic Translation)
 windows-domain-qualified-name=Windows numele de domeniu calificat (Automatic Translation)
 x509-subject-name=X509 sub rezerva numele (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Trebuie să configuraţi conexiunea furnizor de cel puțin o identitate pentru SAML funcţia. (Automatic Translation)
