--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_sl.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_sl.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Dodaj ponudnik identitet (Automatic Translation)
 add-service-provider=Dodaj ponudnika storitev (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Ali ste prepričani, da želite izbrisati ta certifikat iz v keystore? (Automatic Translation)
 assertion-lifetime=Življenjska doba trditev (Automatic Translation)
 assertion-lifetime-help=Vnesite trditev trajanja v sekundah. (Automatic Translation)
 attribute-mapping=Preslikave atributov (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=Poverilnic z enakimi alias že obstaja v SAML keystore, v
 certificate-url=Certifikatni URL (Automatic Translation)
 common-name=Skupno ime (Automatic Translation)
 create-certificate=Ustvarjanje potrdila (Automatic Translation)
+delete-certificate=Brisanje certifikata (Automatic Translation)
 download-certificate=Prenesi potrdilo (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Šifrirano (Automatic Translation)
+encryption-certificate-and-private-key=Šifrirno potrdilo in zasebni ključ (Automatic Translation)
 entity=Subjekt (Automatic Translation)
 entity-id-help=ID entitete je Enolični identifikator, ki ne sme presegati 1024 znakov. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=ID entitete mora biti nastavljena pred zasebni ključ in certifikat moči sploditi. (Automatic Translation)
 entity-id-too-long=ID entitete je daljši od 1024 znakov. (Automatic Translation)
 force-authn=Authn sile (Automatic Translation)
 force-authn-help=Veljavne identitete ponudnika preveriti pristnost uporabnika, ne glede na obstoječe Varnostni kontekst. (Automatic Translation)
-identity-provider=Ponudnik identitet (Automatic Translation)
 identity-provider-connection=Identiteta ponudnika povezave (Automatic Translation)
 identity-provider-connection-entity-id-help=Vnesite ID entitete, ki ponudnika identitete. Ta vrednost ujemati ID entitete, objavljenim v metapodatkih ponudnika identitete. (Automatic Translation)
+identity-provider-connections=Identiteta ponudnika povezave (Automatic Translation)
 identity-provider-metadata-help=Zagotoviti bodisi URL, da identiteta ponudnika metapodatkov ali upload metapodatke XML datoteko. Ko vnesete URL, se redno posodabljajo metapodatke. Prepričajte se, metapodatke vsebuje podpisno potrdilo ponudnika identitet. (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=SAML ohranjali (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=SAML Admin (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Kerberos (Automatic Translation)
 key-algorithm=Algoritem ključa (Automatic Translation)
 key-length-bits=Dolžina ključa (bitov) (Automatic Translation)
 key-password=Ključni geslo (Automatic Translation)
+keystore-exception=Tam je težave z nalaganjem SAML keystore. Se obrnite na skrbnika sistema. (Automatic Translation)
+keystore-password-incorrect=Ni mogoče preveriti pristnosti s SAML keystore. Se obrnite na skrbnika sistema. (Automatic Translation)
 locality=Kraja (Automatic Translation)
 metadata-url=Metapodatki URL (Automatic Translation)
 metadata-xml=Metapodatke XML (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Ime identifikatorja ime atributa (Automatic Trans
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=Ime identifikatorja atribut vrste (Automatic Translation)
 name-identifier-format=Ime identifikatorja zapisa (Automatic Translation)
+new-identity-provider=Nov ponudnik identitet (Automatic Translation)
 new-service-provider=Novega ponudnika storitev (Automatic Translation)
 organization-unit=Organizacijska enota (Automatic Translation)
 persistent=Vztrajno (Automatic Translation)
-please-configure-identity-provider-before-enabling=Preden omogočite konfigurirajte ponudnik identitet. (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Preden omogočite ustvarite poverilnic za podpisovanje. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Prosimo, ustvarite šifriranje poverilnic, če želite šifrirane trditve. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Vnesite edinstveno identiteto ponudnik podjetje ID. (Automatic Translation)
 please-enter-a-unique-service-provider-entity-id=Vnesite edinstveno storitev ponudnika podjetje ID. (Automatic Translation)
 please-enter-a-valid-certificate-validity=Vnesite veljavno potrdilo veljavnost. (Automatic Translation)
@@ -73,6 +80,7 @@ service-provider-defaults=Privzete nastavitve ponudnika storitev (Automatic Tran
 service-provider-metadata-help=Zagotoviti bodisi URL metapodatkov ponudnika storitev ali naloži metapodatke XML datoteko. Ko vnesete URL, se redno posodabljajo metapodatke. Preverite, ali so metapodatki vsebuje podpisno potrdilo ponudnika storitev. (Automatic Translation)
 signature-algorithm=Algoritem za podpis (Automatic Translation)
 subject-dn=Predmet DN (Automatic Translation)
+there-are-no-identity-providers=Obstaja noben ponudnik identitete. (Automatic Translation)
 there-are-no-service-providers=Obstaja noben ponudnik storitev. (Automatic Translation)
 transient=Prehodni (Automatic Translation)
 unspecified=Nedoločene (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=Veljavnosti (dni) (Automatic Translation)
 windows-domain-qualified-name=Kvalificirano ime domene Windows (Automatic Translation)
 x509-subject-name=X509 predmet ime (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Konfigurirajte povezavo vsaj ena identiteta ponudnika za SAML funkcijo. (Automatic Translation)
