--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_sv.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_sv.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Add Identity Provider (Automatic Copy)
 add-service-provider=Lägg till tjänstleverantör
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Are you sure you want to delete this certificate from the keystore? (Automatic Copy)
 assertion-lifetime=Livstid för kontroll
 assertion-lifetime-help=Ange livstid för kontroll i sekunder.
 attribute-mapping=Attributmappning
@@ -18,18 +20,20 @@ certificate-needs-auth=Det finns redan ett matchande alias i SAML-nyckellagret, 
 certificate-url=Certifikat-URL
 common-name=Vanligt namn
 create-certificate=Skapa certifikat
+delete-certificate=Delete Certificate (Automatic Copy)
 download-certificate=Ladda ned certifikat
 dsa=DSA
 encrypted=Krypterad
+encryption-certificate-and-private-key=Encryption Certificate and Private Key (Automatic Copy)
 entity=Enhet
 entity-id-help=Enhets-ID är en unik identifierare som kan bestå av 1024 tecken.
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Enhets-ID måste anges innan privat nyckel och certifikat kan genereras.
 entity-id-too-long=Enhets-ID består av mer än 1024 tecken.
 force-authn=Tvinga AuthN
 force-authn-help=Tvinga identitetsleverantören att återautentisera användare oavsett den befintliga säkerhetskontexten.
-identity-provider=Identitetsleverantör
 identity-provider-connection=Anslutning för identitetsleverantör
 identity-provider-connection-entity-id-help=Ange enhets-ID för identitetsleverantören. Värdet måste matcha enhets-ID:t som visas i metadata för identitetsleverantören.
+identity-provider-connections=Identity Provider Connections (Automatic Copy)
 identity-provider-metadata-help=Ange antingen en URL för metadata för identitetsleverantören eller ladda upp en XML-metadatafil. När du anger en URL uppdateras metadatan periodiskt. Se till att metadatan innehåller identitetsleverantörens signeringscertifikat.
 javax.portlet.title.1_WAR_samlportlet=SAML-Keep Alive
 javax.portlet.title.2_WAR_samlportlet=SAML-admin
@@ -38,6 +42,8 @@ kerberos=Kerberos
 key-algorithm=Nyckelalgoritm
 key-length-bits=Nyckellängd (bitar)
 key-password=Nyckellösenord
+keystore-exception=There was a problem loading the SAML keystore. Please contact your system administrator. (Automatic Copy)
+keystore-password-incorrect=Unable to authenticate with the SAML keystore. Please contact your system administrator. (Automatic Copy)
 locality=Plats
 metadata-url=Metadata-URL
 metadata-xml=Metadata-XML
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Attributnamn för namnidentifierare
 name-identifier-attribute-name-help=Ange användarattributnamn som <strong>emailAddress</strong> eller <strong>screenName</strong>. Alternativt kan du använda <strong>statiskt:</strong> prefix för att använda ett statiskt värde eller <strong>expando:</strong>-prefix för att använda ett expando-attribut.
 name-identifier-attribute-type=Attributtyp för namnidentifierare
 name-identifier-format=Format för namnidentifierare
+new-identity-provider=New Identity Provider (Automatic Copy)
 new-service-provider=Ny tjänstleverantör
 organization-unit=Organisationsenhet
 persistent=Beständig
-please-configure-identity-provider-before-enabling=Konfigurera identitetsleverantören innan aktivering.
 please-create-a-signing-credential-before-enabling=Skapa en signering av autentiseringsuppgifter innan du aktiverar.
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Please create an encryption credential if you want assertions encrypted. (Automatic Copy)
 please-enter-a-unique-identity-provider-entity-id=Ange ett unikt enhets-ID för identitetsleverantör.
 please-enter-a-unique-service-provider-entity-id=Ange ett unikt enhets-ID för tjänstleverantör.
 please-enter-a-valid-certificate-validity=Ange en giltig certifikatgiltighet.
@@ -73,6 +80,7 @@ service-provider-defaults=Standardvärden för tjänsteleverantör
 service-provider-metadata-help=Ange antingen en URL för metadata för tjänstleverantören eller ladda upp en XML-metadatafil. När du anger en URL uppdateras metadatan periodiskt. Se till att metadatan innehåller tjänstleverantörens signeringscertifikat.
 signature-algorithm=Signeringsalgoritm
 subject-dn=Ämnes-DN
+there-are-no-identity-providers=There are no identity providers. (Automatic Copy)
 there-are-no-service-providers=Det finns inga tjänstleverantörer.
 transient=Tillfälligt
 unspecified=Ospecificerat
@@ -85,3 +93,4 @@ valid-from-x-until-x=Giltigt från {0} tills {1}.
 validity-days=Giltighet (dagar)
 windows-domain-qualified-name=Kvalificerat namn för Windows-domän
 x509-subject-name=X509-ämnesnamn
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=You must configure at least one identity provider connection for SAML to function. (Automatic Copy)
