--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_tr.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_tr.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Kimlik Sağlayıcısı Ekle (Automatic Translation)
 add-service-provider=Hizmet sağlayıcısı ekleme (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Bu sertifika deposunun--dan silmek istediğinizden emin misiniz? (Automatic Translation)
 assertion-lifetime=Onaylama işlemi ömür boyu (Automatic Translation)
 assertion-lifetime-help=Onaylama işlemi ömür boyu saniye cinsinden girin. (Automatic Translation)
 attribute-mapping=Özellik eşlemesi (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=Bir kimlik bilgisi eşleme ile diğer ad zaten SAML depos
 certificate-url=Sertifika URL'si (Automatic Translation)
 common-name=Ortak adı (Automatic Translation)
 create-certificate=Sertifika oluşturma (Automatic Translation)
+delete-certificate=Sertifika silme (Automatic Translation)
 download-certificate=Download sertifika (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Şifreli (Automatic Translation)
+encryption-certificate-and-private-key=Şifreleme sertifikanızı ve özel anahtarınızı (Automatic Translation)
 entity=Varlık (Automatic Translation)
 entity-id-help=Varlık kimliği en fazla 1024 karakter uzunluğunda olabilir benzersiz bir tanıtıcıdır. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Varlık kimliği önce özel anahtarı ayarlamanız ve sertifika oluşturulabilir. (Automatic Translation)
 entity-id-too-long=Varlık kimliği 1024'ten fazla karakter uzunluktadır. (Automatic Translation)
 force-authn=Authn zorla (Automatic Translation)
 force-authn-help=Kimlik sağlayıcısı varolan güvenlik içeriği ne olursa olsun kullanıcı yeniden kimlik doğrulaması yapmaya zorlamak. (Automatic Translation)
-identity-provider=Kimlik sağlayıcısı (Automatic Translation)
 identity-provider-connection=Kimlik sağlayıcısı bağlantı (Automatic Translation)
 identity-provider-connection-entity-id-help=Kimlik sağlayıcısı varlık kimliği girin. Bu değerin kimlik sağlayıcısı meta verilerde bildirilen varlık kimliği eşleşmesi gerekir. (Automatic Translation)
+identity-provider-connections=Kimlik sağlayıcı bağlantıları (Automatic Translation)
 identity-provider-metadata-help=Ya bir URL kimlik sağlayıcısı meta verileri sağlamak veya meta veri XML dosyası yükleyin. Bir URL sağlarsanız, meta veriler düzenli aralıklarla güncelleştirilir. İmza sertifikası kimlik sağlayıcısı meta veriler içerdiğinden emin olun. (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=SAML canlı tutar (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=SAML Admin (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Kerberos (Automatic Translation)
 key-algorithm=Anahtar algoritması (Automatic Translation)
 key-length-bits=Anahtar uzunluğunu (bit) (Automatic Translation)
 key-password=Anahtar şifre (Automatic Translation)
+keystore-exception=SAML deposunun yüklenirken bir hata oluştu. Lütfen sistem yöneticinize başvurun. (Automatic Translation)
+keystore-password-incorrect=SAML deposunun ile kimlik doğrulaması yapılamıyor. Lütfen sistem yöneticinize başvurun. (Automatic Translation)
 locality=Yerellik (Automatic Translation)
 metadata-url=Meta veriler URL (Automatic Translation)
 metadata-xml=Meta veri XML (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Adı tanımlayıcı öznitelik adı (Automatic Tr
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=Adı tanımlayıcı öznitelik türü (Automatic Translation)
 name-identifier-format=Adı tanımlayıcı biçimi (Automatic Translation)
+new-identity-provider=Yeni kimlik sağlayıcısı (Automatic Translation)
 new-service-provider=Yeni hizmet sağlayıcısı (Automatic Translation)
 organization-unit=Organizasyon birimi (Automatic Translation)
 persistent=Kalıcı (Automatic Translation)
-please-configure-identity-provider-before-enabling=Lütfen kimlik sağlayıcısı etkinleştirmeden önce yapılandırın. (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Lütfen etkinleştirmeden önce imza bir kimlik bilgisi oluşturun. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Şifreli iddialarının istiyorsanız lütfen bir şifreleme kimlik bilgisi oluşturun. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Lütfen bir benzersiz kimlik sağlayıcısı varlık kimliği girin. (Automatic Translation)
 please-enter-a-unique-service-provider-entity-id=Lütfen benzersiz bir hizmet sağlayıcı varlık kimliği girin. (Automatic Translation)
 please-enter-a-valid-certificate-validity=Lütfen geçerli bir geçerlilik girin. (Automatic Translation)
@@ -73,6 +80,7 @@ service-provider-defaults=Servis sağlayıcı varsayılan ayarları (Automatic T
 service-provider-metadata-help=Ya bir URL hizmet sağlayıcısı meta verileri sağlamak veya meta veri XML dosyası yükleyin. Bir URL sağlarsanız, meta veriler düzenli aralıklarla güncelleştirilir. Servis saðlayýcýnýzýn İmza sertifikası meta veriler içerdiğinden emin olun. (Automatic Translation)
 signature-algorithm=İmza algoritması (Automatic Translation)
 subject-dn=Konu DN (Automatic Translation)
+there-are-no-identity-providers=Hiçbir kimlik sağlayıcıları vardır. (Automatic Translation)
 there-are-no-service-providers=Hiçbir servis sağlayıcıları vardır. (Automatic Translation)
 transient=Geçici (Automatic Translation)
 unspecified=Belirtilmemiş (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=Geçerlilik (gün) (Automatic Translation)
 windows-domain-qualified-name=Windows etki alanı tam adı (Automatic Translation)
 x509-subject-name=X509 adı konu (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=İşlev SAML için en az bir kimlik sağlayıcı bağlantı yapılandırmanız gerekir. (Automatic Translation)
