--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_vi.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_vi.properties
@@ -1,4 +1,6 @@
+add-identity-provider=Thêm nhà cung cấp nhận dạng (Automatic Translation)
 add-service-provider=Thêm nhà cung cấp dịch vụ (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=Bạn có chắc bạn muốn xóa bỏ chứng chỉ này từ keystore? (Automatic Translation)
 assertion-lifetime=Khẳng định cả đời (Automatic Translation)
 assertion-lifetime-help=Nhập vào đời sống khẳng định trong vài giây. (Automatic Translation)
 attribute-mapping=Thuộc tính bản đồ (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=Một ủy nhiệm phù hợp với bí danh đã tồn t
 certificate-url=Chứng chỉ URL (Automatic Translation)
 common-name=Tên phổ biến (Automatic Translation)
 create-certificate=Tạo chứng chỉ (Automatic Translation)
+delete-certificate=Xóa bỏ giấy chứng nhận (Automatic Translation)
 download-certificate=Tải về giấy chứng nhận (Automatic Translation)
 dsa=DSA (Automatic Translation)
 encrypted=Mã hóa (Automatic Translation)
+encryption-certificate-and-private-key=Chứng chỉ mật mã và chìa khóa riêng. (Automatic Translation)
 entity=Thực thể (Automatic Translation)
 entity-id-help=Thực thể ID là một định danh duy nhất có thể lên tới 1024 ký tự. (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=Thực thể ID phải được thiết lập trước khi khóa riêng và giấy chứng nhận có thể được tạo ra. (Automatic Translation)
 entity-id-too-long=Thực thể ID là hơn 1024 ký tự. (Automatic Translation)
 force-authn=Lực lượng Authn (Automatic Translation)
 force-authn-help=Lực lượng nhà cung cấp nhận dạng reauthenticate dùng bất kể bối cảnh an ninh sẵn có. (Automatic Translation)
-identity-provider=Nhà cung cấp nhận dạng (Automatic Translation)
 identity-provider-connection=Danh tính nhà cung cấp kết nối (Automatic Translation)
 identity-provider-connection-entity-id-help=Nhập ID thực thể của các nhà cung cấp nhận dạng. Giá trị này phải khớp với ID thực thể tuyên bố trong các siêu dữ liệu nhà cung cấp nhận dạng. (Automatic Translation)
+identity-provider-connections=Danh tính nhà cung cấp kết nối (Automatic Translation)
 identity-provider-metadata-help=Cung cấp hoặc một URL để các siêu dữ liệu nhà cung cấp nhận dạng hoặc tải lên một tập tin XML siêu dữ liệu. Khi bạn cung cấp một URL, các siêu dữ liệu định kỳ Cập Nhật. Đảm bảo rằng các siêu dữ liệu chứa chứng chỉ ký của các nhà cung cấp nhận dạng. (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=SAML giữ còn sống (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=SAML Admin (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Kerberos (Automatic Translation)
 key-algorithm=Thuật toán khóa (Automatic Translation)
 key-length-bits=Phím dài (Bits) (Automatic Translation)
 key-password=Chìa khóa mật khẩu (Automatic Translation)
+keystore-exception=Đã có một vấn đề tải SAML keystore. Xin vui lòng liên hệ với quản trị hệ thống của bạn. (Automatic Translation)
+keystore-password-incorrect=Không thể xác thực với SAML keystore. Xin vui lòng liên hệ với quản trị hệ thống của bạn. (Automatic Translation)
 locality=Địa phương (Automatic Translation)
 metadata-url=Siêu dữ liệu URL (Automatic Translation)
 metadata-xml=Siêu dữ liệu XML (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=Tên định danh tên thuộc tính (Automatic T
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=Tên định danh thuộc tính Type (Automatic Translation)
 name-identifier-format=Tên định danh định dạng (Automatic Translation)
+new-identity-provider=Nhà cung cấp danh tính mới (Automatic Translation)
 new-service-provider=Nhà cung cấp dịch vụ mới (Automatic Translation)
 organization-unit=Đơn vị tổ chức (Automatic Translation)
 persistent=Liên tục (Automatic Translation)
-please-configure-identity-provider-before-enabling=Hãy cấu hình nhà cung cấp nhận dạng trước khi cho phép. (Automatic Translation)
 please-create-a-signing-credential-before-enabling=Hãy tạo một ủy nhiệm ký hợp đồng trước khi cho phép. (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=Hãy tạo ra một khả năng mật mã nếu bạn muốn khẳng định được mã hóa. (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=Vui lòng nhập một bản sắc độc đáo thực thể nhà cung cấp của bạn. (Automatic Translation)
 please-enter-a-unique-service-provider-entity-id=Vui lòng nhập một nhà cung cấp dịch vụ độc đáo thực thể. (Automatic Translation)
 please-enter-a-valid-certificate-validity=Vui lòng nhập một giá trị hợp lệ giấy chứng nhận. (Automatic Translation)
@@ -73,6 +80,7 @@ service-provider-defaults=Nhà cung cấp dịch vụ mặc định (Automatic T
 service-provider-metadata-help=Cung cấp hoặc một URL để các siêu dữ liệu nhà cung cấp dịch vụ hoặc tải lên một tập tin XML siêu dữ liệu. Khi bạn cung cấp một URL, các siêu dữ liệu định kỳ Cập Nhật. Đảm bảo rằng các siêu dữ liệu chứa các chứng chỉ ký hợp đồng cung cấp dịch vụ. (Automatic Translation)
 signature-algorithm=Giải thuật ký (Automatic Translation)
 subject-dn=Chủ đề DN (Automatic Translation)
+there-are-no-identity-providers=Không có không có nhà cung cấp nhận dạng. (Automatic Translation)
 there-are-no-service-providers=Không có không có nhà cung cấp dịch vụ. (Automatic Translation)
 transient=Thoáng qua (Automatic Translation)
 unspecified=Không xác định (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=Giá trị (ngày) (Automatic Translation)
 windows-domain-qualified-name=Windows tên miền đủ điều kiện (Automatic Translation)
 x509-subject-name=X509 chủ đề tên (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=Bạn phải đặt cấu hình kết nối nhà cung cấp ít nhất một bản sắc cho SAML cho chức năng. (Automatic Translation)
