--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_zh_CN.properties
@@ -1,4 +1,6 @@
+add-identity-provider=添加标识提供程序 (Automatic Translation)
 add-service-provider=添加服务提供商
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=确实要从密钥库中删除此证书吗？ (Automatic Translation)
 assertion-lifetime=断言生存期
 assertion-lifetime-help=输入断言生存期（单位：秒）。
 attribute-mapping=属性映射
@@ -18,18 +20,20 @@ certificate-needs-auth=具有匹配别名的凭据在 SAML 密钥库中已存在
 certificate-url=证书 URL
 common-name=公用名
 create-certificate=创建证书
+delete-certificate=删除证书 (Automatic Translation)
 download-certificate=下载证书
 dsa=DSA
 encrypted=加密
+encryption-certificate-and-private-key=加密证书和私钥 (Automatic Translation)
 entity=实体
 entity-id-help=实体 ID 是一个唯一标识符，最大长度为 1024 个字符。
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=必须首先设置实体 ID，然后才能生成私钥和证书。
 entity-id-too-long=实体 ID 长度超过 1024 个字符。
 force-authn=强制身份验证
 force-authn-help=强制身份提供商重新验证用户，不管现有安全情景如何。
-identity-provider=身份提供商
 identity-provider-connection=身份提供商连接
 identity-provider-connection-entity-id-help=输入身份提供商的实体 ID。此值必须与在身份提供商元数据中声明的实体 ID 匹配。
+identity-provider-connections=标识提供程序连接 (Automatic Translation)
 identity-provider-metadata-help=提供身份提供商元数据的 URL，或者上传元数据 XML 文件。当您提供 URL 时，元数据将定期更新。确保元数据包含身份提供商的签名证书。
 javax.portlet.title.1_WAR_samlportlet=SAML 保持活动状态
 javax.portlet.title.2_WAR_samlportlet=SAML 管理
@@ -38,6 +42,8 @@ kerberos=Kerberos
 key-algorithm=密钥算法
 key-length-bits=密钥长度（位）
 key-password=密钥密码
+keystore-exception=加载 saml 密钥库时出现问题。请与系统管理员联系。 (Automatic Translation)
+keystore-password-incorrect=无法使用 saml 密钥库进行身份验证。请与系统管理员联系。 (Automatic Translation)
 locality=区域
 metadata-url=元数据 URL
 metadata-xml=元数据 XML
@@ -47,11 +53,12 @@ name-identifier-attribute-name=名称标识符属性名称
 name-identifier-attribute-name-help=输入用户属性名称，例如 <strong>emailAddress</strong> 或 <strong>screenName</strong>。或者，您也可以通过 <strong>static:</strong> 前缀使用静态值，或通过 <strong>expando:</strong> 前缀使用 expando 属性。
 name-identifier-attribute-type=名称标识符属性类型
 name-identifier-format=名称标识符格式
+new-identity-provider=新的标识提供程序 (Automatic Translation)
 new-service-provider=新服务提供商
 organization-unit=组织单位
 persistent=持续
-please-configure-identity-provider-before-enabling=请在启用之前配置身份提供商。
 please-create-a-signing-credential-before-enabling=请在启用之前创建签名凭据。
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=如果要加密断言, 请创建加密凭据。 (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=请输入唯一的身份提供商实体 ID。
 please-enter-a-unique-service-provider-entity-id=请输入唯一的服务提供商实体 ID。
 please-enter-a-valid-certificate-validity=请键入有效的证书有效期。
@@ -73,6 +80,7 @@ service-provider-defaults=服务提供商默认值
 service-provider-metadata-help=提供服务提供商元数据的 URL，或者上传元数据 XML 文件。当您提供 URL 时，元数据将定期更新。确保元数据包含服务提供商的签名证书。
 signature-algorithm=签名算法
 subject-dn=主题 DN
+there-are-no-identity-providers=没有标识提供程序。 (Automatic Translation)
 there-are-no-service-providers=没有服务提供商。
 transient=Transient
 unspecified=未指定
@@ -85,3 +93,4 @@ valid-from-x-until-x=有效期为 {0} 到 {1}。
 validity-days=有效期（天）
 windows-domain-qualified-name=Windows 域限定名称
 x509-subject-name=X509 主题名称
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=必须至少配置一个标识提供程序连接, saml 才能正常工作。 (Automatic Translation)
