--- a/modules/private/apps/saml/saml-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/private/apps/saml/saml-web/src/main/resources/content/Language_zh_TW.properties
@@ -1,4 +1,6 @@
+add-identity-provider=添加標識提供程式 (Automatic Translation)
 add-service-provider=添加服務提供者 (Automatic Translation)
+are-you-sure-you-want-to-delete-this-certificate-from-the-keystore=確實要從金鑰庫中刪除此證書嗎？ (Automatic Translation)
 assertion-lifetime=斷言存留期 (Automatic Translation)
 assertion-lifetime-help=以秒為單位輸入斷言存留期。 (Automatic Translation)
 attribute-mapping=屬性對應 (Automatic Translation)
@@ -18,18 +20,20 @@ certificate-needs-auth=具有匹配的憑據別名已存在於 SAML 的金鑰庫
 certificate-url=證書的 URL (Automatic Translation)
 common-name=常用名稱 (Automatic Translation)
 create-certificate=創建證書 (Automatic Translation)
+delete-certificate=刪除證書 (Automatic Translation)
 download-certificate=下載證書 (Automatic Translation)
 dsa=每日生活津貼 (Automatic Translation)
 encrypted=加密 (Automatic Translation)
+encryption-certificate-and-private-key=加密證書和私密金鑰 (Automatic Translation)
 entity=實體 (Automatic Translation)
 entity-id-help=實體 ID 是唯一的識別碼，可達 1024年個字元長。 (Automatic Translation)
 entity-id-must-be-set-before-private-key-and-certificate-can-be-generated=專用金鑰之前，必須設置實體 ID，可以生成證書。 (Automatic Translation)
 entity-id-too-long=實體 ID 長度超過 1024 個字元。 (Automatic Translation)
 force-authn=強制身份驗證 (Automatic Translation)
 force-authn-help=力身份標識提供程式，無論現有的安全上下文的使用者重新進行身份驗證。 (Automatic Translation)
-identity-provider=標識提供程式 (Automatic Translation)
 identity-provider-connection=標識提供程式連接 (Automatic Translation)
 identity-provider-connection-entity-id-help=輸入實體的身份標識提供程式的 ID。此值必須與匹配的身份提供程式中繼資料中聲明的實體 ID。 (Automatic Translation)
+identity-provider-connections=標識提供程式連接 (Automatic Translation)
 identity-provider-metadata-help=提供標識提供程式中繼資料的任一 URL 或上載的中繼資料的 XML 檔。當您提供 URL 時，定期更新中繼資料。請確保中繼資料包含標識提供程式的簽章憑證。 (Automatic Translation)
 javax.portlet.title.1_WAR_samlportlet=SAML 讓活著 (Automatic Translation)
 javax.portlet.title.2_WAR_samlportlet=SAML Admin (Automatic Translation)
@@ -38,6 +42,8 @@ kerberos=Kerberos (Automatic Translation)
 key-algorithm=金鑰演算法 (Automatic Translation)
 key-length-bits=金鑰長度 (Bits) (Automatic Translation)
 key-password=私密金鑰密碼 (Automatic Translation)
+keystore-exception=載入 saml 金鑰庫時出現問題。請與系統管理員聯繫。 (Automatic Translation)
+keystore-password-incorrect=無法使用 saml 金鑰庫進行身份驗證。請與系統管理員聯繫。 (Automatic Translation)
 locality=當地 (Automatic Translation)
 metadata-url=中繼資料的 URL (Automatic Translation)
 metadata-xml=中繼資料 XML (Automatic Translation)
@@ -47,11 +53,12 @@ name-identifier-attribute-name=名稱的識別碼屬性名稱 (Automatic Transla
 name-identifier-attribute-name-help=Enter user attribute name such as <strong>emailAddress</strong> or <strong>screenName</strong>. Alternatively, you can use <strong>static:</strong> prefix to use a static value or <strong>expando:</strong> prefix to use an expando attribute. (Automatic Copy)
 name-identifier-attribute-type=名稱的識別碼的屬性類型 (Automatic Translation)
 name-identifier-format=名稱的識別碼格式 (Automatic Translation)
+new-identity-provider=新的標識提供程式 (Automatic Translation)
 new-service-provider=新的服務提供者 (Automatic Translation)
 organization-unit=組織單位 (Automatic Translation)
 persistent=持久性 (Automatic Translation)
-please-configure-identity-provider-before-enabling=請在啟用之前，配置標識提供程式。 (Automatic Translation)
 please-create-a-signing-credential-before-enabling=請在啟用之前，創建一個簽名的憑據。 (Automatic Translation)
+please-create-an-encryption-credential-if-you-want-assertions-encrypted=如果要加密斷言, 請創建加密憑據。 (Automatic Translation)
 please-enter-a-unique-identity-provider-entity-id=請輸入一個唯一的標識提供程式實體 id。 (Automatic Translation)
 please-enter-a-unique-service-provider-entity-id=請輸入一個唯一的服務提供者的實體 id。 (Automatic Translation)
 please-enter-a-valid-certificate-validity=請輸入有效的證書有效性。 (Automatic Translation)
@@ -73,6 +80,7 @@ service-provider-defaults=服務提供者的預設值 (Automatic Translation)
 service-provider-metadata-help=提供的服務提供程式中繼資料的任一 URL 或上載的中繼資料的 XML 檔。當您提供 URL 時，定期更新中繼資料。請確保中繼資料包含的服務提供程式的簽章憑證。 (Automatic Translation)
 signature-algorithm=簽名演算法 (Automatic Translation)
 subject-dn=主題 DN (Automatic Translation)
+there-are-no-identity-providers=沒有標識提供程式。 (Automatic Translation)
 there-are-no-service-providers=沒有服務提供者。 (Automatic Translation)
 transient=瞬變 (Automatic Translation)
 unspecified=未指定 (Automatic Translation)
@@ -85,3 +93,4 @@ valid-from-x-until-x=Valid from {0} until {1}. (Automatic Copy)
 validity-days=有效期 (天) (Automatic Translation)
 windows-domain-qualified-name=Windows 域限定的名稱 (Automatic Translation)
 x509-subject-name=X 509 主題名稱 (Automatic Translation)
+you-must-configure-at-least-one-identity-provider-connection-for-saml-to-function=必須至少配置一個標識提供程式連接, saml 才能正常工作。 (Automatic Translation)
